--- a/sass/abstracts/_typography.scss
+++ b/sass/abstracts/_typography.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Quicksand", sans-serif;
   font-weight: 400;
   line-height: 1.5;
 }
