--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -2,10 +2,16 @@
   --white: #fff;
   --off-white: #f7f7f5;
   --black: #000;
-  --off-black-1: #0d0d0d;
-  --off-black-2: #090909;
+  --off-black-1: #0f0f0f;
+  --off-black-2: #0a0a0a;
 
-  --brown-light: #c89261;
+  --off-black-3: #101010;
+  --off-black-4: #191919;
+
+  --brown-light: #bc935a;
+  --grey-1: #555;
+  --grey-2: #999;
+  --grey-3: #bbb;
 }
 
 *,
@@ -23,17 +29,32 @@ html {
 
 body {
   box-sizing: border-box;
-  padding: 8rem 0;
+  margin: 3rem;
   background-color: var(--black);
 }
 
 .container {
-  max-width: 120rem;
   margin: 0 auto;
   background-image: linear-gradient(
     135deg,
     var(--off-black-1),
     var(--off-black-2)
   );
-  border-radius: 4rem;
+  border-radius: 3rem;
+}
+
+#scrollbar {
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: var(--black);
+    border-radius: 100px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--brown-light);
+    border-radius: 100px;
+  }
 }
