--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,17 +1,105 @@
 .header {
   display: flex;
+  padding: 4.8rem 8rem;
+  gap: 6.4rem;
   align-items: center;
-  padding: 1.6rem;
-  justify-content: space-evenly;
+  justify-content: center;
 
   &__logo {
-    font-size: 2.4rem;
+    flex: 0 0 20%;
+    display: flex;
+    font-size: 3.2rem;
+    font-weight: 700;
+    letter-spacing: 0.5px;
+    text-decoration: none;
+    color: var(--off-white);
+    justify-content: center;
   }
+
   &__nav {
+    flex: 0 0 50%;
+
     &__list {
       display: flex;
+      align-items: center;
+      justify-content: space-around;
+      list-style-type: none;
+
       &--link {
+        font-size: 1.6rem;
+        font-weight: 400;
+
+        text-decoration: none;
+        letter-spacing: 1px;
+
+        color: var(--off-white);
+        transition: color 0.2s ease;
+
+        border: none;
+        border-bottom: 1px solid transparent;
+
+        &:link,
+        &:hover {
+          color: var(--brown-light);
+        }
+
+        &::after {
+          content: "";
+          display: block;
+          width: 0;
+          height: 2px;
+          background-color: var(--brown-light);
+          transition: width 0.3s;
+        }
+        &:hover::after {
+          width: 100%;
+        }
       }
     }
   }
+
+  &__form {
+    flex: 0 0 18%;
+    display: flex;
+    justify-content: center;
+
+    &--input {
+      font-family: "Quicksand";
+      font-size: 1.2rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      width: 100%;
+      background-color: transparent;
+
+      letter-spacing: 1px;
+      padding: 1rem;
+      border: none;
+      border-radius: 5px;
+      box-shadow: inset 0 0 0 1px var(--off-white);
+      background: transparent
+        url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23bc935a' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E")
+        no-repeat 13px center;
+      background-position: right 5% bottom 50%;
+      transition: padding 0.3s ease;
+      cursor: pointer;
+    }
+
+    &--input:focus {
+      background: none;
+      padding: 1.2rem;
+      border: none;
+      outline: none;
+    }
+
+    &--input::placeholder {
+      color: var(--brown-light);
+    }
+  }
+}
+input,
+select,
+textarea {
+  color: var(--brown-light);
 }
