--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,11 +1,68 @@
 .hero {
-  height: 50rem;
-  padding: 3.2rem;
-  &__heading {
-    color: var(--off-white);
+  display: grid;
+  grid-template-columns: 3fr 3fr;
+  align-items: center;
+  justify-items: center;
+  margin: 0rem 3.2rem 3.2rem 3.2rem;
+  max-height: 100vh;
+
+  &__content {
+    // margin-top: 12.8rem;
+    margin-top: -8rem;
+    &--heading {
+      color: var(--off-white);
+      font-size: 9.6rem;
+      font-weight: 700;
+      margin-bottom: -2rem;
+      text-align: left;
+    }
+
+    &--sub-heading {
+      color: var(--brown-light);
+      text-transform: uppercase;
+      font-size: 1.8rem;
+      font-weight: 500;
+      letter-spacing: 1px;
+      margin-bottom: 4.8rem;
+      text-align: right;
+    }
+
+    &--text {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      &__button {
+      }
+
+      &__para {
+        font-size: 1.4rem;
+        letter-spacing: 0.5px;
+        color: var(--grey-1);
+        cursor: pointer;
+      }
+    }
   }
 
-  &__sub-heading {
-    color: var(--brown-light);
+  &__photo {
+    &-cup {
+      max-width: 80%;
+    }
+  }
+
+  &__note {
+    padding-top: 9.6rem;
+    display: flex;
+    max-width: 30rem;
+    font-size: 1.6rem;
+    color: var(--off-white);
+    align-items: center;
+    letter-spacing: 0.5px;
+    &--icon {
+      margin-left: -1rem;
+      font-size: 8.8rem;
+      font-weight: 400;
+      color: var(--grey-1);
+    }
   }
 }
