--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,11 @@
 @import "abstracts/variables";
 @import "abstracts/typography";
+@import "abstracts/helper";
 
 @import "base/base";
 
+@import "components/button";
+
 @import "layout/header";
 @import "layout/hero";
+@import "layout/how";
