--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,28 +6,43 @@
   box-shadow: inset 0 0 0 1px var(--off-white);
 
   background-color: transparent;
-  color: var(--brown-light);
+  color: var(--off-white);
 
   font-weight: 400;
   font-size: 1.6rem;
 
   text-transform: uppercase;
   letter-spacing: 2px;
+
+  transition: all 0.3s ease;
+
+  &:hover {
+    color: var(--off-black-3);
+    background-color: var(--off-white);
+  }
 }
 
 .section-button {
-  // outline: var(--off-black-3) solid 1px;
+  outline: var(--off-black-3) solid 1px;
   border: none;
-  border-radius: 5px;
-  padding: 0.4rem 0.8rem;
-  // box-shadow: inset 0 0 0 1px var(--off-black-3);
+  border-radius: 4px;
+  padding: 0.6rem 1.2rem;
+  box-shadow: inset 0 0 0 1px var(--off-black-3);
 
   display: block;
   background-color: transparent;
-  color: var(--brown-light);
+  color: var(--off-black-3);
 
-  font-weight: 500;
+  font-weight: 600;
   font-size: 1.2rem;
 
   text-transform: capitalize;
+  letter-spacing: 0.3px;
+
+  transition: all 0.3s ease;
+
+  &:hover {
+    color: var(--off-white);
+    background-color: var(--off-black-3);
+  }
 }
