--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -30,7 +30,7 @@
     &--text {
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      gap: 4.8rem;
 
       &__button {
       }
@@ -47,11 +47,12 @@
   &__photo {
     &-cup {
       max-width: 80%;
+      height: auto;
     }
   }
 
   &__note {
-    padding-top: 9.6rem;
+    padding-top: 12.8rem;
     display: flex;
     max-width: 30rem;
     font-size: 1.6rem;
