--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,82 @@
 body {
+  box-sizing: border-box;
+  margin: 3.2rem;
+  background-color: var(--black);
+  color: var(--off-white); }
+
+.container-about {
+  margin: 0 auto;
+  background-image: linear-gradient(135deg, var(--off-black-1), var(--off-black-2));
+  height: calc(100vh - 6.4rem);
+  padding: 2.4rem;
+  display: grid;
+  grid-template-columns: 0fr 1fr;
+  grid-template-rows: 1fr 4fr;
+  row-gap: 2.4rem;
+  position: relative;
+  overflow: hidden;
+  border-radius: 4rem; }
+  .container-about .coffee-cup {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 30%;
+    transform: rotate(135deg) translate(-47%, 0%); }
+  .container-about .heading {
+    grid-column: 1 / -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; }
+    .container-about .heading--text {
+      font-size: 6.4rem;
+      font-weight: 500;
+      text-transform: capitalize;
+      letter-spacing: 0.5px; }
+    .container-about .heading--subtext {
+      font-size: 1.8rem;
+      font-weight: 400;
+      font-family: "Lobster Two";
+      color: var(--grey-2);
+      text-align: center;
+      letter-spacing: 1.5px; }
+  .container-about .img img {
+    max-width: 65%;
+    max-height: 65%;
+    position: absolute;
+    bottom: 0;
+    left: 0; }
+  .container-about .text {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2rem;
+    max-width: 75rem;
+    hyphens: auto;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.8px;
+    margin: 0 auto; }
+    .container-about .text > * > span {
+      color: var(--brown-light);
+      font-size: 2rem;
+      font-weight: 700;
+      font-family: "lobster Two";
+      text-transform: capitalize; }
+
+#scrollbar::-webkit-scrollbar {
+  width: 10px; }
+
+#scrollbar::-webkit-scrollbar-track {
+  background-color: var(--black);
+  border-radius: 100px; }
+
+#scrollbar::-webkit-scrollbar-thumb {
+  background-color: var(--brown-light);
+  border-radius: 100px; }
+
+body {
   font-family: "Quicksand", sans-serif;
   font-weight: 400;
   line-height: 1.5; }
@@ -14,7 +92,7 @@ body {
   --off-black-2: #0a0a0a;
   --off-black-3: #101010;
   --off-black-4: #191919;
-  --brown-light: #bc935a;
+  --brown-light: #b99158;
   --grey-1: #555;
   --grey-2: #999;
   --grey-3: #bbb; }
@@ -32,7 +110,7 @@ html {
 
 body {
   box-sizing: border-box;
-  margin: 3rem;
+  margin: 3.2rem;
   background-color: var(--black); }
 
 .container {
@@ -85,6 +163,206 @@ body {
   .section-button:hover {
     color: var(--off-white);
     background-color: var(--off-black-3); }
+
+.section-products {
+  padding: 3.2rem 3.2rem 0 3.2rem;
+  margin-bottom: 9.6rem; }
+  .section-products-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    height: 40rem;
+    gap: 4.8rem; }
+  .section-products__title {
+    grid-column: 1 / -1;
+    margin: 0 auto;
+    margin-top: 9.6rem;
+    margin-bottom: 6.4rem;
+    text-align: center; }
+    .section-products__title--heading {
+      font-size: 6.4rem;
+      font-weight: 500;
+      text-transform: capitalize;
+      letter-spacing: 0.5px;
+      color: var(--off-white); }
+    .section-products__title--subheading {
+      font-size: 1.8rem;
+      font-weight: 400;
+      font-family: "Lobster Two";
+      color: var(--grey-2);
+      letter-spacing: 1.5px; }
+
+.card {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  height: 100%;
+  max-width: 35rem;
+  border-radius: 4rem;
+  overflow: hidden;
+  position: relative; }
+  .card--1 {
+    background-color: #cfecf7;
+    background-image: url(/img/Group5.png);
+    background-size: cover; }
+  .card--2 {
+    background-color: #e1c9e1;
+    background-image: url(/img/Group6.png);
+    background-size: cover; }
+  .card--3 {
+    background-color: #ecc1bc;
+    background-image: url(/img/Group7.png);
+    background-size: cover; }
+  .card--4 {
+    background-color: #f9dde0;
+    background-image: url(/img/Group8.png);
+    background-size: cover; }
+  .card__overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    border-radius: 4rem;
+    background-color: var(--off-white);
+    transform: translateY(100%);
+    transition: 0.2s ease-in-out; }
+  .card__image {
+    width: 65%;
+    height: auto;
+    margin-top: 3.2rem;
+    transition: 0.2s ease-in-out; }
+  .card__header {
+    position: relative;
+    padding: 2.4rem;
+    border-radius: 4rem 0 0 0;
+    background-color: var(--off-white);
+    transform: translateY(-100%);
+    transition: 0.2s ease-in-out; }
+  .card:hover .card__overlay {
+    transform: translateY(0); }
+  .card:hover .card__header {
+    transform: translateY(0); }
+  .card:hover .card__image {
+    transform: scale(0.9); }
+  .card__arc {
+    width: 8rem;
+    height: 8rem;
+    position: absolute;
+    bottom: 100%;
+    right: 0;
+    z-index: 1; }
+    .card__arc path {
+      fill: var(--off-white);
+      d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z"); }
+  .card__header-text {
+    display: flex;
+    align-items: center;
+    justify-content: space-around; }
+  .card__title {
+    font-size: 3.2em;
+    font-family: "Lobster Two"; }
+    .card__title--1 {
+      color: #82c3e6; }
+    .card__title--2 {
+      color: #a86ea9; }
+    .card__title--3 {
+      color: #b8524d; }
+    .card__title--4 {
+      color: #ef9ca7; }
+  .card__status {
+    font-size: 2rem;
+    font-weight: 500;
+    color: var(--off-black-3); }
+  .card__description {
+    margin: 0 2.4rem 2.4rem 2.4rem;
+    font-size: 1.2rem;
+    color: var(--off-black-3);
+    font-family: "Quicksand";
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 5;
+    overflow: hidden; }
+  .card__invite {
+    margin: 6.4rem 6.4rem;
+    font-size: 1.8rem;
+    font-weight: 400;
+    font-family: "Lobster Two";
+    color: var(--grey-2);
+    letter-spacing: 1.5px;
+    text-align: center; }
+    .card__invite span {
+      color: var(--off-white);
+      transition: color 0.2s ease;
+      cursor: pointer; }
+      .card__invite span:hover {
+        color: var(--brown-light); }
+
+.line {
+  border-bottom: 1px solid var(--brown-light);
+  min-width: 30%;
+  margin: 0 auto;
+  opacity: 50%; }
+
+.cta {
+  display: flex;
+  align-items: center;
+  flex-direction: column; }
+  .cta-box {
+    margin: 0 auto;
+    text-align: center;
+    margin: 9.6rem; }
+    .cta-box--heading {
+      font-size: 4.8rem;
+      font-weight: 500;
+      text-transform: capitalize;
+      letter-spacing: 0.5px;
+      color: var(--off-white); }
+    .cta-box--subheading {
+      font-size: 1.8rem;
+      font-weight: 400;
+      font-family: "Lobster Two";
+      color: var(--grey-2);
+      letter-spacing: 1.5px;
+      margin-bottom: 4.8rem; }
+
+.form {
+  position: relative; }
+  .form--input {
+    min-width: 100%;
+    font-family: "Quicksand";
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    letter-spacing: 1px;
+    padding: 1rem;
+    border: none;
+    border-radius: 5px;
+    outline: 1px solid var(--off-white);
+    transition: all 0.3s ease-in-out;
+    cursor: pointer; }
+  .form--input:focus {
+    border: none;
+    box-shadow: 0 0.2rem 1.2rem var(--brown-light); }
+    .form--input:focus .form__button {
+      height: 10rem; }
+  .form--input::placeholder {
+    color: var(--brown-light); }
+  .form__button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    color: var(--off-black-3);
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background-color: var(--off-white);
+    border: none;
+    text-transform: capitalize;
+    font-weight: 500;
+    width: 25%;
+    transition: all 0.2s ease-in-out; }
 
 .header {
   display: flex;
@@ -144,16 +422,15 @@ body {
       padding: 1rem;
       border: none;
       border-radius: 5px;
-      box-shadow: inset 0 0 0 1px var(--off-white);
+      outline: 1px solid var(--off-white);
       background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23bc935a' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat 13px center;
       background-position: right 5% bottom 50%;
-      transition: padding 0.3s ease;
+      transition: box-shadow 0.3s ease;
       cursor: pointer; }
     .header__form--input:focus {
       background: none;
-      padding: 1.2rem;
       border: none;
-      outline: none; }
+      box-shadow: 0 0.2rem 1.2rem var(--brown-light); }
     .header__form--input::placeholder {
       color: var(--brown-light); }
 
@@ -179,10 +456,11 @@ textarea {
       text-align: left; }
     .hero__content--sub-heading {
       color: var(--brown-light);
-      text-transform: uppercase;
-      font-size: 1.8rem;
-      font-weight: 500;
-      letter-spacing: 1px;
+      text-transform: capitalize;
+      font-family: "Lobster Two";
+      font-size: 2.4rem;
+      font-weight: 400;
+      letter-spacing: 1.5px;
       margin-bottom: 4.8rem;
       text-align: right; }
     .hero__content--text {
@@ -211,13 +489,15 @@ textarea {
       font-weight: 400;
       color: var(--grey-1); }
 
+.section-history-testimonial-background {
+  background-image: linear-gradient(135deg, var(--off-black-1), var(--off-black-2)); }
+
 .section__history {
   min-height: 80rem;
   display: grid;
   padding: 3.2rem;
   grid-template-columns: 1fr 1fr;
-  color: var(--off-white);
-  background-image: linear-gradient(135deg, var(--off-black-1), var(--off-black-2)); }
+  color: var(--off-white); }
   .section__history-main {
     grid-column: 1 / -1;
     margin: 0 auto;
@@ -225,23 +505,25 @@ textarea {
     .section__history-main__heading {
       font-size: 6.4rem;
       font-weight: 500;
+      text-transform: capitalize;
       letter-spacing: 0.5px; }
     .section__history-main__sub-heading {
       font-size: 1.8rem;
-      font-weight: 500;
-      font-family: "Satisfy";
+      font-weight: 400;
+      font-family: "Lobster Two";
       color: var(--grey-2);
       text-align: center;
-      letter-spacing: 1px; }
+      letter-spacing: 1.5px; }
   .section__history--content {
     grid-column: 1 / 1;
     padding: 8rem; }
     .section__history--content__breif {
       font-size: 4.8rem;
-      font-weight: 500;
-      font-family: "Satisfy";
+      font-weight: 400;
+      font-family: "Lobster Two";
       color: var(--brown-light);
-      text-transform: capitalize; }
+      text-transform: capitalize;
+      letter-spacing: 1.5px; }
     .section__history--content__heading {
       margin-top: -1.8rem;
       margin-bottom: 0.6rem;
@@ -251,7 +533,7 @@ textarea {
       font-family: "Quicksand"; }
     .section__history--content__text {
       max-width: 50rem;
-      font-size: 1.2rem;
+      font-size: 1.6rem;
       font-weight: 400;
       line-height: 2rem;
       font-family: "Quicksand";
@@ -332,10 +614,10 @@ textarea {
       letter-spacing: 0.5px; }
     .section-how__heading--sub {
       font-size: 1.8rem;
-      font-weight: 500;
-      font-family: "Satisfy";
+      font-weight: 400;
+      font-family: "Lobster Two";
       color: var(--grey-2);
-      letter-spacing: 1px; }
+      letter-spacing: 1.5px; }
   .section-how__image {
     grid-column: 1 / 1;
     display: flex;
@@ -346,25 +628,170 @@ textarea {
       z-index: 2;
       position: relative; }
   .section-how__content {
-    padding: 11.2rem; }
+    padding: 8.8rem; }
     .section-how__content--breif {
-      font-size: 2.4rem;
-      font-weight: 500;
-      font-family: "Satisfy";
+      font-size: 3.2rem;
+      font-weight: 400;
+      font-family: "Lobster Two";
       color: var(--grey-3);
-      text-transform: capitalize; }
+      text-transform: capitalize;
+      letter-spacing: 1.5px;
+      opacity: 0.4; }
     .section-how__content--heading {
-      margin-bottom: 0.4rem;
+      margin-bottom: 1rem;
       font-size: 2.4rem;
       letter-spacing: -0.2px;
       font-weight: 500;
       font-family: "Quicksand";
       color: var(--off-black-3); }
     .section-how__content--text {
-      max-width: 45rem;
+      max-width: 48rem;
+      color: var(--off-black-3);
+      hyphens: auto;
+      font-size: 1.6rem;
+      font-weight: 400;
+      line-height: 1.5;
+      letter-spacing: 0.8px;
+      margin-bottom: 1.2rem; }
+
+.section-testimonials {
+  color: var(--off-white);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 0 3.2rem 3.2rem 3.2rem; }
+  .section-testimonials__title {
+    text-align: center;
+    grid-column: 1 / -1;
+    margin-top: 9.6rem;
+    margin-bottom: 6.4rem; }
+    .section-testimonials__title--heading {
+      font-size: 6.4rem;
+      font-weight: 500;
+      text-transform: capitalize;
+      letter-spacing: 0.5px; }
+    .section-testimonials__title--subheading {
+      font-size: 1.8rem;
+      font-weight: 400;
+      font-family: "Lobster Two";
+      color: var(--grey-2);
+      letter-spacing: 1.5px; }
+  .section-testimonials__container {
+    grid-column: 1 / 2; }
+
+.testimonials {
+  display: grid;
+  grid-template-columns: 1fr 1fr; }
+  .testimonials__fig {
+    padding: 4.8rem; }
+    .testimonials__fig--img {
+      width: 6.4rem;
+      border-radius: 50%; }
+    .testimonials__fig--text {
+      font-size: 1.6rem;
+      font-weight: 400;
+      line-height: 1.5;
+      letter-spacing: 0.8px;
+      margin-bottom: 1.2rem; }
+    .testimonials__fig--name {
+      font-size: 1.6rem;
+      font-weight: 400;
+      font-family: "Lobster Two";
+      color: var(--grey-3);
+      letter-spacing: 1.5px; }
+
+.gallery {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1.6rem;
+  padding: 1.6rem; }
+  .gallery__item {
+    overflow: hidden; }
+    .gallery__item img {
+      display: block;
+      width: 100%;
+      transition: transform 0.2s ease-in-out; }
+      .gallery__item img:hover {
+        transform: scale(1.1); }
+
+.footer {
+  color: var(--off-white);
+  border-bottom-right-radius: 4rem;
+  border-bottom-left-radius: 4rem;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0 4.8rem 4.8rem 4.8rem; }
+  .footer > * {
+    margin-top: 4.8rem;
+    position: relative;
+    z-index: 3; }
+  .footer::before {
+    content: "";
+    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(/img/coffee-top-view.jpg);
+    background-size: 100%;
+    background-position: center;
+    background-repeat: none;
+    position: absolute;
+    height: 100%;
+    width: 100%; }
+  .footer__connect {
+    flex: 0 0 33%;
+    padding: 4.8rem; }
+    .footer__connect--logo {
+      font-size: 3.2rem;
+      font-weight: 700;
+      letter-spacing: 0.5px;
+      color: var(--off-white);
+      margin-bottom: 3.2rem; }
+    .footer__connect--text {
+      hyphens: auto;
+      max-width: 30rem;
       font-size: 1.2rem;
       font-weight: 400;
-      line-height: 2rem;
-      font-family: "Quicksand";
-      color: var(--off-black-3);
-      hyphens: auto; }
+      line-height: 1.5;
+      letter-spacing: 0.8px; }
+    .footer__connect--copyright {
+      margin-top: 1.2rem;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.5;
+      letter-spacing: 0.8px; }
+  .footer__contact {
+    flex: 0 0 33%;
+    padding: 4.8rem; }
+    .footer__contact > * span {
+      font-size: 1.8rem;
+      color: var(--brown-light); }
+    .footer__contact > * {
+      hyphens: auto;
+      font-size: 1.2rem;
+      font-weight: 400;
+      line-height: 1.5;
+      letter-spacing: 0.8px;
+      margin-bottom: 0.8rem;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 1.4rem; }
+    .footer__contact--heading {
+      font-size: 3.2rem;
+      font-weight: 700;
+      letter-spacing: 0.5px;
+      color: var(--off-white);
+      margin-bottom: 3.2rem;
+      text-transform: capitalize; }
+  .footer__link {
+    flex: 0 0 33%;
+    padding: 4.8rem; }
+    .footer__link--heading {
+      font-size: 3.2rem;
+      font-weight: 700;
+      letter-spacing: 0.5px;
+      color: var(--off-white);
+      margin-bottom: 3.2rem;
+      text-transform: capitalize; }
+    .footer__link .twitter {
+      fill: var(--brown-light);
+      font-size: 1rem; }
