--- a/sass/layout/_history.scss
+++ b/sass/layout/_history.scss
@@ -1,14 +1,16 @@
+.section-history-testimonial-background {
+  background-image: linear-gradient(
+    135deg,
+    var(--off-black-1),
+    var(--off-black-2)
+  );
+}
 .section__history {
   min-height: 80rem;
   display: grid;
   padding: 3.2rem;
   grid-template-columns: 1fr 1fr;
   color: var(--off-white);
-  background-image: linear-gradient(
-    135deg,
-    var(--off-black-1),
-    var(--off-black-2)
-  );
 
   &-main {
     grid-column: 1 / -1;
@@ -17,16 +19,17 @@
     &__heading {
       font-size: 6.4rem;
       font-weight: 500;
+      text-transform: capitalize;
       letter-spacing: 0.5px;
     }
 
     &__sub-heading {
       font-size: 1.8rem;
-      font-weight: 500;
-      font-family: "Satisfy";
+      font-weight: 400;
+      font-family: "Lobster Two";
       color: var(--grey-2);
       text-align: center;
-      letter-spacing: 1px;
+      letter-spacing: 1.5px;
     }
   }
 
@@ -36,10 +39,11 @@
 
     &__breif {
       font-size: 4.8rem;
-      font-weight: 500;
-      font-family: "Satisfy";
+      font-weight: 400;
+      font-family: "Lobster Two";
       color: var(--brown-light);
       text-transform: capitalize;
+      letter-spacing: 1.5px;
     }
 
     &__heading {
@@ -53,7 +57,7 @@
 
     &__text {
       max-width: 50rem;
-      font-size: 1.2rem;
+      font-size: 1.6rem;
       font-weight: 400;
       line-height: 2rem;
       font-family: "Quicksand";
