--- a/sass/layout/_how.scss
+++ b/sass/layout/_how.scss
@@ -32,10 +32,10 @@
 
     &--sub {
       font-size: 1.8rem;
-      font-weight: 500;
-      font-family: "Satisfy";
+      font-weight: 400;
+      font-family: "Lobster Two";
       color: var(--grey-2);
-      letter-spacing: 1px;
+      letter-spacing: 1.5px;
     }
   }
 
@@ -53,17 +53,19 @@
   }
 
   &__content {
-    padding: 11.2rem;
+    padding: 8.8rem;
     &--breif {
-      font-size: 2.4rem;
-      font-weight: 500;
-      font-family: "Satisfy";
+      font-size: 3.2rem;
+      font-weight: 400;
+      font-family: "Lobster Two";
       color: var(--grey-3);
       text-transform: capitalize;
+      letter-spacing: 1.5px;
+      opacity: 0.4;
     }
 
     &--heading {
-      margin-bottom: 0.4rem;
+      margin-bottom: 1rem;
       font-size: 2.4rem;
       letter-spacing: -0.2px;
       font-weight: 500;
@@ -71,13 +73,15 @@
       color: var(--off-black-3);
     }
     &--text {
-      max-width: 45rem;
-      font-size: 1.2rem;
-      font-weight: 400;
-      line-height: 2rem;
-      font-family: "Quicksand";
+      max-width: 48rem;
       color: var(--off-black-3);
       hyphens: auto;
+
+      font-size: 1.6rem;
+      font-weight: 400;
+      line-height: 1.5;
+      letter-spacing: 0.8px;
+      margin-bottom: 1.2rem;
     }
   }
 }
