--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
-@import "abstracts/variables";
+@import "pages/about";
+
 @import "abstracts/typography";
 @import "abstracts/helper";
 
@@ -6,7 +7,11 @@
 
 @import "components/button";
 
+@import "layout/card";
+@import "layout/cta";
 @import "layout/header";
 @import "layout/hero";
 @import "layout/history";
 @import "layout/how";
+@import "layout/testimonials";
+@import "layout/footer";
