--- a/css/style.css
+++ b/css/style.css
@@ -4,66 +4,147 @@ body {
   background-color: var(--black);
   color: var(--off-white); }
 
-.container-about {
+.container-menu {
   margin: 0 auto;
-  background-image: linear-gradient(135deg, var(--off-black-1), var(--off-black-2));
+  padding: 0 6.4rem;
+  background: radial-gradient(circle at 24.1% 68.8%, #141414 0%, #0c0c0c 99.4%);
   height: calc(100vh - 6.4rem);
-  padding: 2.4rem;
   display: grid;
-  grid-template-columns: 0fr 1fr;
-  grid-template-rows: 1fr 4fr;
-  row-gap: 2.4rem;
-  position: relative;
-  overflow: hidden;
-  border-radius: 4rem; }
-  .container-about .coffee-cup {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 30%;
-    transform: rotate(135deg) translate(-47%, 0%); }
-  .container-about .heading {
-    grid-column: 1 / -1;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr 4.5fr;
+  gap: 6.4rem; }
+
+#scrollbar::-webkit-scrollbar {
+  width: 10px; }
+
+#scrollbar::-webkit-scrollbar-track {
+  background-color: var(--black);
+  border-radius: 100px; }
+
+#scrollbar::-webkit-scrollbar-thumb {
+  background-color: var(--brown-light);
+  border-radius: 100px; }
+
+body {
+  box-sizing: border-box;
+  margin: 3.2rem;
+  background-color: var(--black);
+  color: var(--off-white); }
+  body .about-page {
+    overflow-y: hidden; }
+
+.about-container {
+  margin: 0 auto;
+  padding: 0 6.4rem;
+  background: radial-gradient(circle at 24.1% 68.8%, #141414 0%, #0c0c0c 99.4%);
+  height: calc(100vh - 6.4rem);
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 1fr 4.5fr;
+  gap: 4.8rem; }
+  .about-container .about {
+    margin: 0 8rem; }
+    .about-container .about-content {
+      grid-column: 1 / 3; }
+    .about-container .about-do--1 {
+      margin-top: 10rem;
+      grid-column: 3 / 4;
+      background-color: #cfecf7;
+      position: relative;
+      height: auto;
+      max-width: 35rem; }
+      .about-container .about-do--1::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        height: calc(100vh - 3.2rem);
+        border-left: 1px solid #cfecf7; }
+    .about-container .about-do--2 {
+      margin-top: 5rem;
+      margin-bottom: 5rem;
+      grid-column: 4 / 5;
+      position: relative;
+      background-color: #e1c9e1;
+      max-width: 35rem; }
+      .about-container .about-do--2::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        height: calc(100vh - 3.2rem);
+        border-left: 1px solid #e1c9e1; }
+    .about-container .about-do--3 {
+      margin-bottom: 10rem;
+      grid-column: 5 / 6;
+      position: relative;
+      background-color: #ecc1bc;
+      max-width: 35rem; }
+      .about-container .about-do--3::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        height: calc(100vh - 6.4rem);
+        border-left: 1px solid #ecc1bc; }
+    .about-container .about-content {
+      display: flex;
+      align-items: flex-start;
+      justify-content: center; }
+      .about-container .about-content__header--heading {
+        font-size: 4.8rem;
+        font-family: "Lobster Two"; }
+        .about-container .about-content__header--heading span {
+          color: var(--brown-light); }
+      .about-container .about-content__header--subheading {
+        font-size: 3.2rem;
+        font-family: "Lobster Two"; }
+      .about-container .about-content__text {
+        margin-top: 4.8rem;
+        font-size: 1.6rem;
+        letter-spacing: 1px;
+        line-height: 1.5;
+        max-width: 40rem;
+        hyphens: auto; }
+
+.header-about {
+  grid-column: 1 / -1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 4.8rem 0; }
+  .header-about__logo {
+    font-size: 3.2rem;
+    font-weight: 700;
+    letter-spacing: 0.5px;
+    text-decoration: none;
+    color: var(--off-white);
+    justify-content: center; }
+  .header-about__profile {
+    background-color: var(--off-white);
+    color: var(--off-black-1);
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex-direction: column; }
-    .container-about .heading--text {
-      font-size: 6.4rem;
-      font-weight: 500;
-      text-transform: capitalize;
-      letter-spacing: 0.5px; }
-    .container-about .heading--subtext {
-      font-size: 1.8rem;
-      font-weight: 400;
-      font-family: "Lobster Two";
-      color: var(--grey-2);
-      text-align: center;
-      letter-spacing: 1.5px; }
-  .container-about .img img {
-    max-width: 65%;
-    max-height: 65%;
-    position: absolute;
-    bottom: 0;
-    left: 0; }
-  .container-about .text {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    gap: 2rem;
-    max-width: 75rem;
-    hyphens: auto;
-    font-size: 1.6rem;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.8px;
-    margin: 0 auto; }
-    .container-about .text > * > span {
-      color: var(--brown-light);
-      font-size: 2rem;
-      font-weight: 700;
-      font-family: "lobster Two";
-      text-transform: capitalize; }
+    justify-content: space-between;
+    padding: 0.6rem;
+    border-radius: 1000px;
+    gap: 1.8rem; }
+    @media only screen and (max-width: 90em) {
+      .header-about__profile--name {
+        font-size: 1rem;
+        font-weight: 700; } }
+    .header-about__profile--name {
+      font-size: 1.4rem;
+      font-weight: 800;
+      display: block; }
+    .header-about__profile--photo {
+      height: 3.6rem;
+      width: 3.6rem; }
+      .header-about__profile--photo .profile {
+        background-color: var(--brown-light);
+        max-height: 100%;
+        border-radius: 1000px;
+        max-width: 100%; }
 
 #scrollbar::-webkit-scrollbar {
   width: 10px; }
@@ -107,6 +188,12 @@ body {
 
 html {
   font-size: 62.5%; }
+  @media only screen and (min-width: 125em) {
+    html {
+      font-size: 75%; } }
+  @media only screen and (max-width: 74em) {
+    html {
+      font-size: 56.25%; } }
 
 body {
   box-sizing: border-box;
@@ -115,8 +202,7 @@ body {
 
 .container {
   margin: 0 auto;
-  background-image: linear-gradient(135deg, var(--off-black-1), var(--off-black-2));
-  border-radius: 3rem; }
+  background: radial-gradient(circle at 24.1% 68.8%, #191919 0%, #0f0f0f 99.4%); }
 
 #scrollbar::-webkit-scrollbar {
   width: 10px; }
@@ -166,12 +252,17 @@ body {
 
 .section-products {
   padding: 3.2rem 3.2rem 0 3.2rem;
-  margin-bottom: 9.6rem; }
+  margin-bottom: 9.6rem;
+  height: auto; }
   .section-products-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    height: 40rem;
+    grid-template-columns: repeat(4, 1fr);
     gap: 4.8rem; }
+    .section-products-grid > * {
+      margin: 0 auto; }
+    @media only screen and (max-width: 85em) {
+      .section-products-grid {
+        grid-template-columns: repeat(2, 1fr); } }
   .section-products__title {
     grid-column: 1 / -1;
     margin: 0 auto;
@@ -195,8 +286,8 @@ body {
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  height: 100%;
-  max-width: 35rem;
+  height: 40rem;
+  max-width: 30rem;
   border-radius: 4rem;
   overflow: hidden;
   position: relative; }
@@ -245,8 +336,8 @@ body {
   .card:hover .card__image {
     transform: scale(0.9); }
   .card__arc {
-    width: 8rem;
-    height: 8rem;
+    width: 80px;
+    height: 80px;
     position: absolute;
     bottom: 100%;
     right: 0;
@@ -283,7 +374,8 @@ body {
     -webkit-line-clamp: 5;
     overflow: hidden; }
   .card__invite {
-    margin: 6.4rem 6.4rem;
+    grid-column: 1 / -1;
+    margin: 6.4rem 6.4rem 0 6.4rem;
     font-size: 1.8rem;
     font-weight: 400;
     font-family: "Lobster Two";
@@ -310,7 +402,7 @@ body {
   .cta-box {
     margin: 0 auto;
     text-align: center;
-    margin: 9.6rem; }
+    margin: 9.6rem 9.6rem 19.2rem 9.6rem; }
     .cta-box--heading {
       font-size: 4.8rem;
       font-weight: 500;
@@ -364,14 +456,17 @@ body {
     width: 25%;
     transition: all 0.2s ease-in-out; }
 
+body {
+  position: relative; }
+
 .header {
   display: flex;
-  padding: 4.8rem 8rem;
+  padding: 3.2rem 6.4rem;
   gap: 6.4rem;
   align-items: center;
-  justify-content: center; }
+  justify-content: space-between;
+  z-index: 1000; }
   .header__logo {
-    flex: 0 0 20%;
     display: flex;
     font-size: 3.2rem;
     font-weight: 700;
@@ -386,6 +481,9 @@ body {
       align-items: center;
       justify-content: space-around;
       list-style-type: none; }
+      @media only screen and (max-width: 90em) {
+        .header__nav__list {
+          gap: 3.2rem; } }
       .header__nav__list--link {
         font-size: 1.6rem;
         font-weight: 400;
@@ -406,33 +504,6 @@ body {
           transition: width 0.3s; }
         .header__nav__list--link:hover::after {
           width: 100%; }
-  .header__form {
-    flex: 0 0 18%;
-    display: flex;
-    justify-content: center; }
-    .header__form--input {
-      font-family: "Quicksand";
-      font-size: 1.2rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      background-color: transparent;
-      letter-spacing: 1px;
-      padding: 1rem;
-      border: none;
-      border-radius: 5px;
-      outline: 1px solid var(--off-white);
-      background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23bc935a' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat 13px center;
-      background-position: right 5% bottom 50%;
-      transition: box-shadow 0.3s ease;
-      cursor: pointer; }
-    .header__form--input:focus {
-      background: none;
-      border: none;
-      box-shadow: 0 0.2rem 1.2rem var(--brown-light); }
-    .header__form--input::placeholder {
-      color: var(--brown-light); }
 
 input,
 select,
@@ -444,37 +515,33 @@ textarea {
   grid-template-columns: 3fr 3fr;
   align-items: center;
   justify-items: center;
-  margin: 0rem 3.2rem 3.2rem 3.2rem;
-  max-height: 100vh; }
-  .hero__content {
-    margin-top: -8rem; }
-    .hero__content--heading {
-      color: var(--off-white);
-      font-size: 9.6rem;
-      font-weight: 700;
-      margin-bottom: -2rem;
-      text-align: left; }
-    .hero__content--sub-heading {
-      color: var(--brown-light);
-      text-transform: capitalize;
-      font-family: "Lobster Two";
-      font-size: 2.4rem;
-      font-weight: 400;
-      letter-spacing: 1.5px;
-      margin-bottom: 4.8rem;
-      text-align: right; }
-    .hero__content--text {
-      display: flex;
-      align-items: center;
-      gap: 4.8rem; }
-      .hero__content--text__para {
-        font-size: 1.4rem;
-        letter-spacing: 0.5px;
-        color: var(--grey-1);
-        cursor: pointer; }
+  margin: 0rem 3.2rem 3.2rem 3.2rem; }
+  .hero__content--heading {
+    color: var(--off-white);
+    font-size: 9.6rem;
+    font-weight: 700;
+    margin-bottom: -2rem;
+    text-align: left; }
+  .hero__content--sub-heading {
+    color: var(--brown-light);
+    text-transform: capitalize;
+    font-family: "Lobster Two";
+    font-size: 2.4rem;
+    font-weight: 400;
+    letter-spacing: 1.5px;
+    margin-bottom: 4.8rem;
+    text-align: right; }
+  .hero__content--text {
+    display: flex;
+    align-items: center;
+    gap: 4.8rem; }
+    .hero__content--text__para {
+      font-size: 1.4rem;
+      letter-spacing: 0.5px;
+      color: var(--grey-1);
+      cursor: pointer; }
   .hero__photo-cup {
-    max-width: 80%;
-    height: auto; }
+    max-width: 80%; }
   .hero__note {
     padding-top: 12.8rem;
     display: flex;
@@ -569,9 +636,10 @@ textarea {
         font-size: 1.6rem;
         font-weight: 400;
         color: var(--off-black-3);
-        letter-spacing: 0.5px; }
+        letter-spacing: 0.5px;
+        position: relative; }
     .section__history--image-coffeebean {
-      width: 35%;
+      width: 30%;
       height: auto;
       position: relative;
       z-index: 10;
@@ -579,7 +647,7 @@ textarea {
     .section__history--image::before {
       content: "";
       width: 100%;
-      padding-bottom: 50%;
+      padding-bottom: 40%;
       border-top-left-radius: 1000px;
       border-bottom-left-radius: 1000px;
       left: 3.2rem;
@@ -590,13 +658,13 @@ textarea {
   background-color: var(--off-white);
   display: grid;
   padding: 3.2rem;
-  grid-template-columns: 2fr 2fr;
+  grid-template-columns: 1fr 1fr;
   position: relative; }
   .section-how::after {
     content: "";
     position: absolute;
     background-color: var(--brown-light);
-    width: 30%;
+    width: 25%;
     height: 100%;
     display: block; }
   .section-how__heading {
@@ -676,13 +744,29 @@ textarea {
       color: var(--grey-2);
       letter-spacing: 1.5px; }
   .section-testimonials__container {
-    grid-column: 1 / 2; }
+    grid-column: 1 / 2;
+    margin-top: auto;
+    margin-bottom: auto; }
 
 .testimonials {
   display: grid;
-  grid-template-columns: 1fr 1fr; }
+  grid-template-columns: 1fr 1fr;
+  row-gap: 4.8rem;
+  column-gap: 8rem; }
+  @media only screen and (max-width: 90em) {
+    .testimonials {
+      column-gap: 3.6rem; } }
+  @media only screen and (max-width: 74em) {
+    .testimonials {
+      column-gap: 2.4rem; } }
   .testimonials__fig {
-    padding: 4.8rem; }
+    padding: 2.4rem; }
+    @media only screen and (max-width: 90em) {
+      .testimonials__fig {
+        padding: 3.6rem; } }
+    @media only screen and (max-width: 74em) {
+      .testimonials__fig {
+        padding: 2.4rem; } }
     .testimonials__fig--img {
       width: 6.4rem;
       border-radius: 50%; }
@@ -704,8 +788,15 @@ textarea {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1.6rem;
   padding: 1.6rem; }
+  @media only screen and (max-width: 90em) {
+    .gallery {
+      grid-template-columns: 1fr 1fr; } }
   .gallery__item {
     overflow: hidden; }
+    @media only screen and (max-width: 90em) {
+      .gallery__item:last-child {
+        display: none;
+        visibility: hidden; } }
     .gallery__item img {
       display: block;
       width: 100%;
@@ -715,21 +806,17 @@ textarea {
 
 .footer {
   color: var(--off-white);
-  border-bottom-right-radius: 4rem;
-  border-bottom-left-radius: 4rem;
   overflow: hidden;
   position: relative;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
-  padding: 0 4.8rem 4.8rem 4.8rem; }
+  align-items: flex-start; }
   .footer > * {
-    margin-top: 4.8rem;
     position: relative;
     z-index: 3; }
   .footer::before {
     content: "";
-    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(/img/coffee-top-view.jpg);
+    background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(/img/footer-wallpaper.jpg);
     background-size: 100%;
     background-position: center;
     background-repeat: none;
@@ -762,8 +849,10 @@ textarea {
     flex: 0 0 33%;
     padding: 4.8rem; }
     .footer__contact > * span {
-      font-size: 1.8rem;
-      color: var(--brown-light); }
+      font-size: 2.4rem;
+      color: var(--brown-light);
+      stroke: var(--brown-light);
+      overflow: hidden; }
     .footer__contact > * {
       hyphens: auto;
       font-size: 1.2rem;
@@ -785,6 +874,21 @@ textarea {
   .footer__link {
     flex: 0 0 33%;
     padding: 4.8rem; }
+    .footer__link-list {
+      display: flex;
+      flex-direction: column;
+      gap: 0.8rem; }
+      .footer__link-list--items {
+        hyphens: auto;
+        font-size: 1.2rem;
+        font-weight: 400;
+        line-height: 1.5;
+        letter-spacing: 0.8px;
+        margin-bottom: 0.8rem;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 1.4rem; }
     .footer__link--heading {
       font-size: 3.2rem;
       font-weight: 700;
@@ -792,6 +896,7 @@ textarea {
       color: var(--off-white);
       margin-bottom: 3.2rem;
       text-transform: capitalize; }
-    .footer__link .twitter {
-      fill: var(--brown-light);
-      font-size: 1rem; }
+      .footer__link--heading__icon {
+        height: 2.4rem;
+        width: 2.4rem;
+        fill: var(--brown-light); }
