--- a/sass/layout/_card.scss
+++ b/sass/layout/_card.scss
@@ -1,12 +1,19 @@
 .section-products {
   padding: 3.2rem 3.2rem 0 3.2rem;
   margin-bottom: 9.6rem;
-
+  height: auto;
   &-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    height: 40rem;
+    grid-template-columns: repeat(4, 1fr);
     gap: 4.8rem;
+
+    & > * {
+      margin: 0 auto;
+    }
+
+    @include respond(big-tab) {
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 
   &__title {
@@ -36,8 +43,8 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  height: 100%;
-  max-width: 35rem;
+  height: 40rem;
+  max-width: 30rem;
   border-radius: 4rem;
   overflow: hidden;
   position: relative;
@@ -105,8 +112,8 @@
   }
 
   &__arc {
-    width: 8rem;
-    height: 8rem;
+    width: 80px;
+    height: 80px;
     position: absolute;
     bottom: 100%;
     right: 0;
@@ -159,7 +166,8 @@
   }
 
   &__invite {
-    margin: 6.4rem 6.4rem;
+    grid-column: 1 / -1;
+    margin: 6.4rem 6.4rem 0 6.4rem;
     font-size: 1.8rem;
     font-weight: 400;
     font-family: "Lobster Two";
