--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,17 +1,13 @@
 .footer {
   color: var(--off-white);
-  border-bottom-right-radius: 4rem;
-  border-bottom-left-radius: 4rem;
   overflow: hidden;
   position: relative;
 
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  padding: 0 4.8rem 4.8rem 4.8rem;
 
   & > * {
-    margin-top: 4.8rem;
     position: relative;
     z-index: 3;
   }
@@ -23,7 +19,7 @@
         rgba($black, 0.65),
         rgba($black, 0.65)
       ),
-      url(/img/coffee-top-view.jpg);
+      url(/img/footer-wallpaper.jpg);
 
     background-size: 100%;
     background-position: center;
@@ -67,8 +63,10 @@
 
     & > * {
       span {
-        font-size: 1.8rem;
+        font-size: 2.4rem;
         color: var(--brown-light);
+        stroke: var(--brown-light);
+        overflow: hidden;
       }
     }
 
@@ -99,6 +97,25 @@
     flex: 0 0 33%;
     padding: 4.8rem;
 
+    &-list {
+      display: flex;
+      flex-direction: column;
+      gap: 0.8rem;
+      &--items {
+        hyphens: auto;
+
+        font-size: 1.2rem;
+        font-weight: 400;
+        line-height: 1.5;
+        letter-spacing: 0.8px;
+        margin-bottom: 0.8rem;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 1.4rem;
+      }
+    }
+
     &--heading {
       font-size: 3.2rem;
       font-weight: 700;
@@ -106,11 +123,12 @@
       color: var(--off-white);
       margin-bottom: 3.2rem;
       text-transform: capitalize;
-    }
 
-    .twitter {
-      fill: var(--brown-light);
-      font-size: 1rem;
+      &__icon {
+        height: 2.4rem;
+        width: 2.4rem;
+        fill: var(--brown-light);
+      }
     }
   }
 }
