--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,12 +1,17 @@
+body {
+  position: relative;
+}
+
 .header {
   display: flex;
-  padding: 4.8rem 8rem;
+  padding: 3.2rem 6.4rem;
   gap: 6.4rem;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+
+  z-index: 1000;
 
   &__logo {
-    flex: 0 0 20%;
     display: flex;
     font-size: 3.2rem;
     font-weight: 700;
@@ -24,6 +29,9 @@
       align-items: center;
       justify-content: space-around;
       list-style-type: none;
+      @include respond(sm-desktop) {
+        gap: 3.2rem;
+      }
 
       &--link {
         font-size: 1.6rem;
@@ -55,46 +63,6 @@
           width: 100%;
         }
       }
-    }
-  }
-
-  &__form {
-    flex: 0 0 18%;
-    display: flex;
-    justify-content: center;
-
-    &--input {
-      font-family: "Quicksand";
-      font-size: 1.2rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      width: 100%;
-      background-color: transparent;
-
-      letter-spacing: 1px;
-      padding: 1rem;
-      border: none;
-      border-radius: 5px;
-      // box-shadow: inset 0 0 0 1px var(--off-white);
-      outline: 1px solid var(--off-white);
-      background: transparent
-        url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23bc935a' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E")
-        no-repeat 13px center;
-      background-position: right 5% bottom 50%;
-      transition: box-shadow 0.3s ease;
-      cursor: pointer;
-    }
-
-    &--input:focus {
-      background: none;
-      border: none;
-      box-shadow: 0 0.2rem 1.2rem var(--brown-light);
-    }
-
-    &--input::placeholder {
-      color: var(--brown-light);
     }
   }
 }
