--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,100 @@
 body {
   box-sizing: border-box;
-  margin: 3.2rem;
   background-color: var(--black);
   color: var(--off-white); }
 
-.container-menu {
+.menu-container {
   margin: 0 auto;
   padding: 0 6.4rem;
   background: radial-gradient(circle at 24.1% 68.8%, #141414 0%, #0c0c0c 99.4%);
-  height: calc(100vh - 6.4rem);
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 1fr 4.5fr;
-  gap: 6.4rem; }
+  grid-template-columns: repeat(10, 2fr);
+  grid-template-rows: 2fr repeat(15, 4fr);
+  gap: 3.2rem; }
+  .menu-container .menu {
+    margin: 0 8rem; }
+    .menu-container .menu-do--1 {
+      grid-row: 2 / 5;
+      grid-column: 5 / 7; }
+    .menu-container .menu-do--4 {
+      grid-row: 5 / 8;
+      grid-column: 5 / 7; }
+    .menu-container .menu-do--7 {
+      grid-row: 8 / 11;
+      grid-column: 5 / 7; }
+    .menu-container .menu-do--10 {
+      grid-row: 11 / 14;
+      grid-column: 5 / 7; }
+    .menu-container .menu-do--2 {
+      grid-row: 3 / 6;
+      grid-column: 7 / 9; }
+    .menu-container .menu-do--5 {
+      grid-row: 6 / 9;
+      grid-column: 7 / 9; }
+    .menu-container .menu-do--8 {
+      grid-column: 7 / 9;
+      grid-row: 9 / 12; }
+    .menu-container .menu-do--11 {
+      grid-column: 7 / 9;
+      grid-row: 12 / 15; }
+    .menu-container .menu-do--3 {
+      grid-column: 9 / 11;
+      grid-row: 4 / 7; }
+    .menu-container .menu-do--6 {
+      grid-column: 9 / 11;
+      grid-row: 7 / 10; }
+    .menu-container .menu-do--9 {
+      grid-column: 9 / 11;
+      grid-row: 10 / 13; }
+    .menu-container .menu-do--12 {
+      grid-column: 9 / 11;
+      grid-row: 13 / 16; }
+    .menu-container .menu-content {
+      grid-column: 1 / 5;
+      grid-row: 3 / 6; }
+      .menu-container .menu-content__header--heading {
+        font-size: 4.8rem;
+        font-family: "Lobster Two"; }
+        .menu-container .menu-content__header--heading span {
+          color: var(--brown-light); }
+      .menu-container .menu-content__header--subheading {
+        font-size: 3.2rem;
+        font-family: "Lobster Two"; }
+      .menu-container .menu-content__text {
+        margin-top: 4.8rem;
+        font-size: 1.6rem;
+        letter-spacing: 1px;
+        line-height: 1.5;
+        max-width: 40rem;
+        hyphens: auto; }
+
+.menu-card__details {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  padding: 1.6rem 2.4rem;
+  gap: 0.8rem; }
+
+.menu-card-list {
+  grid-row: 1 / -1;
+  grid-column: 1 / 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: var(--black);
+  font-size: 1.4rem;
+  font-weight: 500; }
+  .menu-card-list > * {
+    list-style: none; }
+
+.menu-card-add-btn {
+  grid-column: 2 / -1;
+  grid-row: 1 / 2; }
+
+.menu-card-remove-btn {
+  grid-column: 2 / -1;
+  grid-row: 2 / -1; }
 
 #scrollbar::-webkit-scrollbar {
   width: 10px; }
@@ -25,14 +107,6 @@ body {
   background-color: var(--brown-light);
   border-radius: 100px; }
 
-body {
-  box-sizing: border-box;
-  margin: 3.2rem;
-  background-color: var(--black);
-  color: var(--off-white); }
-  body .about-page {
-    overflow-y: hidden; }
-
 .about-container {
   margin: 0 auto;
   padding: 0 6.4rem;
@@ -40,14 +114,16 @@ body {
   height: calc(100vh - 6.4rem);
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: 1fr 4.5fr;
-  gap: 4.8rem; }
+  grid-template-rows: 2fr 5fr;
+  gap: 3.2rem; }
   .about-container .about {
     margin: 0 8rem; }
     .about-container .about-content {
-      grid-column: 1 / 3; }
+      grid-column: 1 / 3;
+      grid-row: 2 / 2; }
     .about-container .about-do--1 {
-      margin-top: 10rem;
+      grid-row: 2 / 2;
+      margin-bottom: 10rem;
       grid-column: 3 / 4;
       background-color: #cfecf7;
       position: relative;
@@ -58,9 +134,10 @@ body {
         position: absolute;
         bottom: 0;
         right: 0;
-        height: calc(100vh - 3.2rem);
+        height: calc(100vh - 6.4rem);
         border-left: 1px solid #cfecf7; }
     .about-container .about-do--2 {
+      grid-row: 2 / 2;
       margin-top: 5rem;
       margin-bottom: 5rem;
       grid-column: 4 / 5;
@@ -72,10 +149,11 @@ body {
         position: absolute;
         bottom: 0;
         right: 0;
-        height: calc(100vh - 3.2rem);
+        height: calc(100vh - 0rem);
         border-left: 1px solid #e1c9e1; }
     .about-container .about-do--3 {
-      margin-bottom: 10rem;
+      grid-row: 2 / 2;
+      margin-top: 10rem;
       grid-column: 5 / 6;
       position: relative;
       background-color: #ecc1bc;
@@ -85,7 +163,7 @@ body {
         position: absolute;
         bottom: 0;
         right: 0;
-        height: calc(100vh - 6.4rem);
+        height: calc(100vh - 3.2rem);
         border-left: 1px solid #ecc1bc; }
     .about-container .about-content {
       display: flex;
@@ -106,45 +184,6 @@ body {
         line-height: 1.5;
         max-width: 40rem;
         hyphens: auto; }
-
-.header-about {
-  grid-column: 1 / -1;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 4.8rem 0; }
-  .header-about__logo {
-    font-size: 3.2rem;
-    font-weight: 700;
-    letter-spacing: 0.5px;
-    text-decoration: none;
-    color: var(--off-white);
-    justify-content: center; }
-  .header-about__profile {
-    background-color: var(--off-white);
-    color: var(--off-black-1);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.6rem;
-    border-radius: 1000px;
-    gap: 1.8rem; }
-    @media only screen and (max-width: 90em) {
-      .header-about__profile--name {
-        font-size: 1rem;
-        font-weight: 700; } }
-    .header-about__profile--name {
-      font-size: 1.4rem;
-      font-weight: 800;
-      display: block; }
-    .header-about__profile--photo {
-      height: 3.6rem;
-      width: 3.6rem; }
-      .header-about__profile--photo .profile {
-        background-color: var(--brown-light);
-        max-height: 100%;
-        border-radius: 1000px;
-        max-width: 100%; }
 
 #scrollbar::-webkit-scrollbar {
   width: 10px; }
@@ -194,18 +233,24 @@ html {
   @media only screen and (max-width: 74em) {
     html {
       font-size: 56.25%; } }
+  @media only screen and (max-width: 62.5em) {
+    html {
+      font-size: 50%; } }
 
 body {
   box-sizing: border-box;
-  margin: 3.2rem;
+  margin: 2.8rem;
   background-color: var(--black); }
+  @media only screen and (max-width: 85em) {
+    body {
+      margin: 0; } }
 
 .container {
   margin: 0 auto;
   background: radial-gradient(circle at 24.1% 68.8%, #191919 0%, #0f0f0f 99.4%); }
 
 #scrollbar::-webkit-scrollbar {
-  width: 10px; }
+  width: 5px; }
 
 #scrollbar::-webkit-scrollbar-track {
   background-color: var(--black);
@@ -223,8 +268,9 @@ body {
   box-shadow: inset 0 0 0 1px var(--off-white);
   background-color: transparent;
   color: var(--off-white);
-  font-weight: 400;
+  font-weight: 600;
   font-size: 1.6rem;
+  font-family: "Quicksand";
   text-transform: uppercase;
   letter-spacing: 2px;
   transition: all 0.3s ease; }
@@ -250,6 +296,14 @@ body {
     color: var(--off-white);
     background-color: var(--off-black-3); }
 
+.menu-button {
+  color: var(--off-black-3) !important;
+  padding: 0.6rem 1.2rem !important;
+  font-size: 1.2rem !important; }
+  .menu-button:hover {
+    color: var(--brown-light) !important;
+    background-color: var(--off-black-3) !important; }
+
 .section-products {
   padding: 3.2rem 3.2rem 0 3.2rem;
   margin-bottom: 9.6rem;
@@ -258,6 +312,16 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 4.8rem; }
+    @media only screen and (max-width: 85em) {
+      .section-products-grid {
+        column-gap: 0;
+        row-gap: 4.8rem;
+        padding: 6.4rem 6.4rem 0 6.4rem; } }
+    @media only screen and (max-width: 62.5em) {
+      .section-products-grid {
+        column-gap: 0;
+        row-gap: 4.8rem;
+        padding: 8rem 8rem 0 8rem; } }
     .section-products-grid > * {
       margin: 0 auto; }
     @media only screen and (max-width: 85em) {
@@ -288,7 +352,7 @@ body {
   justify-content: center;
   height: 40rem;
   max-width: 30rem;
-  border-radius: 4rem;
+  border-radius: 3.3rem;
   overflow: hidden;
   position: relative; }
   .card--1 {
@@ -313,7 +377,7 @@ body {
     left: 0;
     right: 0;
     z-index: 1;
-    border-radius: 4rem;
+    border-radius: 3.3rem;
     background-color: var(--off-white);
     transform: translateY(100%);
     transition: 0.2s ease-in-out; }
@@ -325,7 +389,7 @@ body {
   .card__header {
     position: relative;
     padding: 2.4rem;
-    border-radius: 4rem 0 0 0;
+    border-radius: 3.3rem 0 0 0;
     background-color: var(--off-white);
     transform: translateY(-100%);
     transition: 0.2s ease-in-out; }
@@ -371,7 +435,7 @@ body {
     font-family: "Quicksand";
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 5;
+    -webkit-line-clamp: 3;
     overflow: hidden; }
   .card__invite {
     grid-column: 1 / -1;
@@ -387,6 +451,110 @@ body {
       transition: color 0.2s ease;
       cursor: pointer; }
       .card__invite span:hover {
+        color: var(--brown-light); }
+
+.menu-card {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  height: 40rem;
+  max-width: 30rem;
+  border-radius: 4rem;
+  overflow: hidden;
+  position: relative; }
+  .menu-card--1 {
+    background-color: #444;
+    background-image: url(/img/Group9.png);
+    background-size: cover; }
+  .menu-card--2 {
+    background-color: #444;
+    background-image: url(/img/Group10.png);
+    background-size: cover; }
+  .menu-card--3 {
+    background-color: #444;
+    background-image: url(/img/Group11.png);
+    background-size: cover; }
+  .menu-card__overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    border-radius: 4rem;
+    background-color: var(--off-white);
+    transform: translateY(100%);
+    transition: 0.2s ease-in-out; }
+  .menu-card__image {
+    width: 70%;
+    height: auto;
+    margin-top: 4.8rem;
+    transition: 0.2s ease-in-out; }
+  .menu-card__header {
+    position: relative;
+    padding: 1.6rem 2.4rem;
+    border-radius: 4rem 0 0 0;
+    background-color: var(--off-white);
+    transform: translateY(-100%);
+    transition: 0.2s ease-in-out; }
+  .menu-card:focus .menu-card__overlay,
+  .menu-card:hover .menu-card__overlay {
+    transform: translateY(0); }
+  .menu-card:focus .menu-card__header,
+  .menu-card:hover .menu-card__header {
+    transform: translateY(0); }
+  .menu-card:focus .menu-card__image,
+  .menu-card:hover .menu-card__image {
+    transform: scale(0.6); }
+  .menu-card__arc {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    bottom: 100%;
+    right: 0;
+    z-index: 1; }
+    .menu-card__arc path {
+      fill: var(--off-white);
+      d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z"); }
+  .menu-card__header-text {
+    display: flex;
+    align-items: center;
+    justify-content: space-around; }
+  .menu-card__title {
+    font-size: 3.2em;
+    font-family: "Lobster Two"; }
+    .menu-card__title--1 {
+      color: var(--black); }
+    .menu-card__title--2 {
+      color: #333; }
+    .menu-card__title--3 {
+      color: var(--brown-light); }
+  .menu-card__status {
+    font-size: 2rem;
+    font-weight: 500;
+    color: var(--off-black-3); }
+  .menu-card__description {
+    margin: 0 2.4rem 2.4rem 2.4rem;
+    font-size: 1.2rem;
+    color: var(--off-black-3);
+    font-family: "Quicksand";
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden; }
+  .menu-card__invite {
+    grid-column: 1 / -1;
+    margin: 6.4rem 6.4rem 0 6.4rem;
+    font-size: 1.8rem;
+    font-weight: 400;
+    font-family: "Lobster Two";
+    color: var(--grey-2);
+    letter-spacing: 1.5px;
+    text-align: center; }
+    .menu-card__invite span {
+      color: var(--off-white);
+      transition: color 0.2s ease;
+      cursor: pointer; }
+      .menu-card__invite span:hover {
         color: var(--brown-light); }
 
 .line {
@@ -461,10 +629,14 @@ body {
 
 .header {
   display: flex;
-  padding: 3.2rem 6.4rem;
-  gap: 6.4rem;
+  padding: 2.8rem 6.4rem 0 6.4rem;
   align-items: center;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100vw;
   z-index: 1000; }
   .header__logo {
     display: flex;
@@ -474,36 +646,35 @@ body {
     text-decoration: none;
     color: var(--off-white);
     justify-content: center; }
-  .header__nav {
-    flex: 0 0 50%; }
-    .header__nav__list {
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      list-style-type: none; }
-      @media only screen and (max-width: 90em) {
-        .header__nav__list {
-          gap: 3.2rem; } }
-      .header__nav__list--link {
-        font-size: 1.6rem;
-        font-weight: 400;
-        text-decoration: none;
-        letter-spacing: 1px;
-        color: var(--off-white);
-        transition: color 0.2s ease;
-        border: none;
-        border-bottom: 1px solid transparent; }
-        .header__nav__list--link:link, .header__nav__list--link:hover {
-          color: var(--brown-light); }
-        .header__nav__list--link::after {
-          content: "";
-          display: block;
-          width: 0;
-          height: 2px;
-          background-color: var(--brown-light);
-          transition: width 0.3s; }
-        .header__nav__list--link:hover::after {
-          width: 100%; }
+  .header__nav__list {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    list-style-type: none;
+    gap: 3.2rem; }
+    @media only screen and (max-width: 90em) {
+      .header__nav__list {
+        gap: 3.2rem; } }
+    .header__nav__list--link {
+      font-size: 1.6rem;
+      font-weight: 500;
+      text-decoration: none;
+      letter-spacing: 1px;
+      color: var(--off-white);
+      transition: color 0.2s ease;
+      border: none;
+      border-bottom: 1px solid transparent; }
+      .header__nav__list--link:hover {
+        color: var(--brown-light); }
+      .header__nav__list--link::after {
+        content: "";
+        display: block;
+        width: 0;
+        height: 2px;
+        background-color: var(--brown-light);
+        transition: width 0.3s; }
+      .header__nav__list--link:hover::after {
+        width: 100%; }
 
 input,
 select,
@@ -512,16 +683,20 @@ textarea {
 
 .hero {
   display: grid;
-  grid-template-columns: 3fr 3fr;
+  grid-template-columns: 5fr 4fr;
   align-items: center;
   justify-items: center;
-  margin: 0rem 3.2rem 3.2rem 3.2rem; }
+  margin: 0rem 3.2rem;
+  height: 100vh; }
   .hero__content--heading {
     color: var(--off-white);
     font-size: 9.6rem;
     font-weight: 700;
     margin-bottom: -2rem;
     text-align: left; }
+    @media only screen and (max-width: 74em) {
+      .hero__content--heading {
+        font-size: 8rem; } }
   .hero__content--sub-heading {
     color: var(--brown-light);
     text-transform: capitalize;
@@ -531,10 +706,14 @@ textarea {
     letter-spacing: 1.5px;
     margin-bottom: 4.8rem;
     text-align: right; }
+    @media only screen and (max-width: 74em) {
+      .hero__content--sub-heading {
+        font-size: 2rem;
+        margin-bottom: 3.6rem; } }
   .hero__content--text {
     display: flex;
     align-items: center;
-    gap: 4.8rem; }
+    justify-content: space-between; }
     .hero__content--text__para {
       font-size: 1.4rem;
       letter-spacing: 0.5px;
@@ -542,19 +721,22 @@ textarea {
       cursor: pointer; }
   .hero__photo-cup {
     max-width: 80%; }
+    @media only screen and (max-width: 85em) {
+      .hero__photo-cup {
+        max-width: 70%;
+        margin: 0 auto; } }
   .hero__note {
-    padding-top: 12.8rem;
-    display: flex;
+    margin-top: 12.8rem;
     max-width: 30rem;
     font-size: 1.6rem;
     color: var(--off-white);
-    align-items: center;
     letter-spacing: 0.5px; }
-    .hero__note--icon {
-      margin-left: -1rem;
-      font-size: 8.8rem;
-      font-weight: 400;
-      color: var(--grey-1); }
+    @media only screen and (max-width: 74em) {
+      .hero__note {
+        margin-top: 9.6rem; } }
+    @media only screen and (max-width: 62.5em) {
+      .hero__note {
+        margin-top: 8rem; } }
 
 .section-history-testimonial-background {
   background-image: linear-gradient(135deg, var(--off-black-1), var(--off-black-2)); }
@@ -667,6 +849,9 @@ textarea {
     width: 25%;
     height: 100%;
     display: block; }
+    @media only screen and (max-width: 74em) {
+      .section-how::after {
+        width: 20%; } }
   .section-how__heading {
     grid-column: 1 / -1;
     margin: 0 auto;
@@ -695,8 +880,14 @@ textarea {
       max-width: 100%;
       z-index: 2;
       position: relative; }
+      @media only screen and (max-width: 85em) {
+        .section-how__image--cold_brew_bottle {
+          max-width: 90%; } }
   .section-how__content {
     padding: 8.8rem; }
+    @media only screen and (max-width: 74em) {
+      .section-how__content {
+        padding-top: 9.6rem; } }
     .section-how__content--breif {
       font-size: 3.2rem;
       font-weight: 400;
@@ -753,6 +944,9 @@ textarea {
   grid-template-columns: 1fr 1fr;
   row-gap: 4.8rem;
   column-gap: 8rem; }
+  @media only screen and (max-width: 74em) {
+    .testimonials {
+      grid-template-columns: 1fr; } }
   @media only screen and (max-width: 90em) {
     .testimonials {
       column-gap: 3.6rem; } }
@@ -791,6 +985,9 @@ textarea {
   @media only screen and (max-width: 90em) {
     .gallery {
       grid-template-columns: 1fr 1fr; } }
+  @media only screen and (max-width: 62.5em) {
+    .gallery {
+      grid-template-columns: 1fr 1fr 1fr 1fr; } }
   .gallery__item {
     overflow: hidden; }
     @media only screen and (max-width: 90em) {
@@ -875,9 +1072,9 @@ textarea {
     flex: 0 0 33%;
     padding: 4.8rem; }
     .footer__link-list {
-      display: flex;
-      flex-direction: column;
-      gap: 0.8rem; }
+      display: grid;
+      grid-template-columns: 0.4fr 0.4fr;
+      row-gap: 0.8rem; }
       .footer__link-list--items {
         hyphens: auto;
         font-size: 1.2rem;
