--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -25,21 +25,28 @@ $black: #000;
 }
 
 html {
-  font-size: 62.5%;
+  font-size: 62.5%; // 10/16
 
   @include respond(big-desktop) {
-    font-size: 75%; //1rem = 12, 12/16
+    font-size: 75%; // 12/16
   }
 
   @include respond(md-tab) {
-    font-size: 56.25%; //1rem = 12, 12/16
+    font-size: 56.25%; // 9/16
+  }
+
+  @include respond(sm-tab) {
+    font-size: 50%; // 8/16
   }
 }
 
 body {
   box-sizing: border-box;
-  margin: 3.2rem;
+  margin: 2.8rem;
   background-color: var(--black);
+  @include respond(big-tab) {
+    margin: 0;
+  }
 }
 
 .container {
@@ -53,7 +60,7 @@ body {
 
 #scrollbar {
   &::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
   }
 
   &::-webkit-scrollbar-track {
