--- a/sass/layout/_card.scss
+++ b/sass/layout/_card.scss
@@ -7,6 +7,18 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 4.8rem;
 
+    @include respond(big-tab) {
+      column-gap: 0;
+      row-gap: 4.8rem;
+      padding: 6.4rem 6.4rem 0 6.4rem;
+    }
+
+    @include respond(sm-tab) {
+      column-gap: 0;
+      row-gap: 4.8rem;
+      padding: 8rem 8rem 0 8rem;
+    }
+
     & > * {
       margin: 0 auto;
     }
@@ -45,7 +57,7 @@
   justify-content: center;
   height: 40rem;
   max-width: 30rem;
-  border-radius: 4rem;
+  border-radius: 3.3rem;
   overflow: hidden;
   position: relative;
 
@@ -75,7 +87,7 @@
     left: 0;
     right: 0;
     z-index: 1;
-    border-radius: 4rem;
+    border-radius: 3.3rem;
     background-color: var(--off-white);
     transform: translateY(100%);
     transition: 0.2s ease-in-out;
@@ -93,7 +105,7 @@
     position: relative;
 
     padding: 2.4rem;
-    border-radius: 4rem 0 0 0;
+    border-radius: 3.3rem 0 0 0;
     background-color: var(--off-white);
     transform: translateY(-100%);
     transition: 0.2s ease-in-out;
@@ -161,7 +173,151 @@
     font-family: "Quicksand";
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 5;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+  }
+
+  &__invite {
+    grid-column: 1 / -1;
+    margin: 6.4rem 6.4rem 0 6.4rem;
+    font-size: 1.8rem;
+    font-weight: 400;
+    font-family: "Lobster Two";
+    color: var(--grey-2);
+    letter-spacing: 1.5px;
+    text-align: center;
+
+    span {
+      color: var(--off-white);
+      transition: color 0.2s ease;
+      cursor: pointer;
+
+      &:hover {
+        color: var(--brown-light);
+      }
+    }
+  }
+}
+
+.menu-card {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  height: 40rem;
+  max-width: 30rem;
+  border-radius: 4rem;
+  overflow: hidden;
+  position: relative;
+
+  &--1 {
+    background-color: #444;
+    background-image: url(/img/Group9.png);
+    background-size: cover;
+  }
+  &--2 {
+    background-color: #444;
+    background-image: url(/img/Group10.png);
+    background-size: cover;
+  }
+  &--3 {
+    background-color: #444;
+    background-image: url(/img/Group11.png);
+    background-size: cover;
+  }
+
+  &__overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    border-radius: 4rem;
+    background-color: var(--off-white);
+    transform: translateY(100%);
+    transition: 0.2s ease-in-out;
+  }
+
+  &__image {
+    width: 70%;
+    height: auto;
+    margin-top: 4.8rem;
+    // box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.3);
+    transition: 0.2s ease-in-out;
+  }
+
+  &__header {
+    position: relative;
+
+    padding: 1.6rem 2.4rem;
+    border-radius: 4rem 0 0 0;
+    background-color: var(--off-white);
+    transform: translateY(-100%);
+    transition: 0.2s ease-in-out;
+  }
+
+  &:focus &__overlay,
+  &:hover &__overlay {
+    transform: translateY(0);
+  }
+
+  &:focus &__header,
+  &:hover &__header {
+    transform: translateY(0);
+  }
+
+  &:focus &__image,
+  &:hover &__image {
+    transform: scale(0.6);
+  }
+
+  &__arc {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    bottom: 100%;
+    right: 0;
+    z-index: 1;
+
+    path {
+      fill: var(--off-white);
+      d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
+    }
+  }
+
+  &__header-text {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  &__title {
+    font-size: 3.2em;
+    font-family: "Lobster Two";
+    &--1 {
+      color: var(--black);
+    }
+    &--2 {
+      color: #333;
+    }
+    &--3 {
+      color: var(--brown-light);
+    }
+  }
+
+  &__status {
+    font-size: 2rem;
+    font-weight: 500;
+    color: var(--off-black-3);
+  }
+
+  &__description {
+    margin: 0 2.4rem 2.4rem 2.4rem;
+    font-size: 1.2rem;
+    color: var(--off-black-3);
+    font-family: "Quicksand";
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
     overflow: hidden;
   }
 
