--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -98,9 +98,9 @@
     padding: 4.8rem;
 
     &-list {
-      display: flex;
-      flex-direction: column;
-      gap: 0.8rem;
+      display: grid;
+      grid-template-columns: 0.4fr 0.4fr;
+      row-gap: 0.8rem;
       &--items {
         hyphens: auto;
 
