--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,9 +1,10 @@
 .hero {
   display: grid;
-  grid-template-columns: 3fr 3fr;
+  grid-template-columns: 5fr 4fr;
   align-items: center;
   justify-items: center;
-  margin: 0rem 3.2rem 3.2rem 3.2rem;
+  margin: 0rem 3.2rem;
+  height: 100vh;
 
   &__content {
     // margin-top: 12.8rem;
@@ -14,6 +15,9 @@
       font-weight: 700;
       margin-bottom: -2rem;
       text-align: left;
+      @include respond(md-tab) {
+        font-size: 8rem;
+      }
     }
 
     &--sub-heading {
@@ -25,12 +29,16 @@
       letter-spacing: 1.5px;
       margin-bottom: 4.8rem;
       text-align: right;
+      @include respond(md-tab) {
+        font-size: 2rem;
+        margin-bottom: 3.6rem;
+      }
     }
 
     &--text {
       display: flex;
       align-items: center;
-      gap: 4.8rem;
+      justify-content: space-between;
 
       &__para {
         font-size: 1.4rem;
@@ -44,22 +52,24 @@
   &__photo {
     &-cup {
       max-width: 80%;
+      @include respond(big-tab) {
+        max-width: 70%;
+        margin: 0 auto;
+      }
     }
   }
 
   &__note {
-    padding-top: 12.8rem;
-    display: flex;
+    margin-top: 12.8rem;
     max-width: 30rem;
     font-size: 1.6rem;
     color: var(--off-white);
-    align-items: center;
     letter-spacing: 0.5px;
-    &--icon {
-      margin-left: -1rem;
-      font-size: 8.8rem;
-      font-weight: 400;
-      color: var(--grey-1);
+    @include respond(md-tab) {
+      margin-top: 9.6rem;
+    }
+    @include respond(sm-tab) {
+      margin-top: 8rem;
     }
   }
 }
