--- a/sass/layout/_testimonials.scss
+++ b/sass/layout/_testimonials.scss
@@ -36,6 +36,9 @@
 .testimonials {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  @include respond(md-tab) {
+    grid-template-columns: 1fr;
+  }
   row-gap: 4.8rem;
   column-gap: 8rem;
 
@@ -80,6 +83,10 @@
 
   @include respond(sm-desktop) {
     grid-template-columns: 1fr 1fr;
+  }
+
+  @include respond(sm-tab) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 
   gap: 1.6rem;
