--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -1,11 +1,4 @@
-body {
-  box-sizing: border-box;
-  margin: 3.2rem;
-  background-color: var(--black);
-  color: var(--off-white);
-  .about-page {
-    overflow-y: hidden;
-  }
+.about-page {
 }
 
 .about-container {
@@ -19,16 +12,19 @@ body {
   height: calc(100vh - 6.4rem);
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: 1fr 4.5fr;
-  gap: 4.8rem;
+  grid-template-rows: 2fr 5fr;
+  gap: 3.2rem;
 
   .about {
     margin: 0 8rem;
+
     &-content {
       grid-column: 1 / 3;
+      grid-row: 2 / 2;
     }
     &-do--1 {
-      margin-top: 10rem;
+      grid-row: 2 / 2;
+      margin-bottom: 10rem;
       grid-column: 3 / 4;
       background-color: #cfecf7;
       position: relative;
@@ -40,11 +36,12 @@ body {
         position: absolute;
         bottom: 0;
         right: 0;
-        height: calc(100vh - 3.2rem);
+        height: calc(100vh - 6.4rem);
         border-left: 1px solid #cfecf7;
       }
     }
     &-do--2 {
+      grid-row: 2 / 2;
       margin-top: 5rem;
       margin-bottom: 5rem;
       grid-column: 4 / 5;
@@ -57,25 +54,29 @@ body {
         position: absolute;
         bottom: 0;
         right: 0;
-        height: calc(100vh - 3.2rem);
+        height: calc(100vh - 0rem);
         border-left: 1px solid #e1c9e1;
       }
     }
+
     &-do--3 {
-      margin-bottom: 10rem;
+      grid-row: 2 / 2;
+      margin-top: 10rem;
       grid-column: 5 / 6;
       position: relative;
       background-color: #ecc1bc;
       max-width: 35rem;
+
       &::after {
         content: "";
         position: absolute;
         bottom: 0;
         right: 0;
-        height: calc(100vh - 6.4rem);
+        height: calc(100vh - 3.2rem);
         border-left: 1px solid #ecc1bc;
       }
     }
+
     &-content {
       display: flex;
       align-items: flex-start;
@@ -104,138 +105,6 @@ body {
     }
   }
 }
-
-.header-about {
-  grid-column: 1 / -1;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 4.8rem 0;
-
-  &__logo {
-    font-size: 3.2rem;
-    font-weight: 700;
-    letter-spacing: 0.5px;
-    text-decoration: none;
-    color: var(--off-white);
-    justify-content: center;
-  }
-
-  &__profile {
-    background-color: var(--off-white);
-    color: var(--off-black-1);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.6rem;
-    border-radius: 1000px;
-    gap: 1.8rem;
-
-    @include respond(sm-desktop) {
-      &--name {
-        font-size: 1rem;
-        font-weight: 700;
-      }
-    }
-    &--name {
-      font-size: 1.4rem;
-      font-weight: 800;
-      display: block;
-    }
-
-    &--photo {
-      height: 3.6rem;
-      width: 3.6rem;
-
-      .profile {
-        background-color: var(--brown-light);
-        max-height: 100%;
-        border-radius: 1000px;
-        max-width: 100%;
-      }
-    }
-  }
-}
-// .container-about {
-//   margin: 0 auto;
-//   background-image: linear-gradient(
-//     135deg,
-//     var(--off-black-1),
-//     var(--off-black-2)
-//   );
-//   height: calc(100vh - 6.4rem);
-//   padding: 2.4rem;
-//   display: grid;
-//   grid-template-columns: 0fr 1fr;
-//   grid-template-rows: 1fr 4fr;
-//   row-gap: 2.4rem;
-//   position: relative;
-//   overflow: hidden;
-//   border-radius: 4rem;
-
-//   .coffee-cup {
-//     position: absolute;
-//     top: 0;
-//     right: 0;
-//     width: 30%;
-//     transform: rotate(135deg) translate(-47%, 0%);
-//   }
-
-//   .heading {
-//     grid-column: 1 / -1;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     flex-direction: column;
-
-//     &--text {
-//       font-size: 6.4rem;
-//       font-weight: 500;
-//       text-transform: capitalize;
-//       letter-spacing: 0.5px;
-//     }
-//     &--subtext {
-//       font-size: 1.8rem;
-//       font-weight: 400;
-//       font-family: "Lobster Two";
-//       color: var(--grey-2);
-//       text-align: center;
-//       letter-spacing: 1.5px;
-//     }
-//   }
-
-//   .img {
-//     img {
-//       max-width: 65%;
-//       max-height: 65%;
-//       position: absolute;
-//       bottom: 0;
-//       left: 0;
-//     }
-//   }
-
-//   .text {
-//     display: flex;
-//     justify-content: center;
-//     flex-direction: column;
-//     gap: 2rem;
-//     max-width: 75rem;
-//     hyphens: auto;
-//     font-size: 1.6rem;
-//     font-weight: 400;
-//     line-height: 1.5;
-//     letter-spacing: 0.8px;
-//     margin: 0 auto;
-
-//     & > * > span {
-//       color: var(--brown-light);
-//       font-size: 2rem;
-//       font-weight: 700;
-//       font-family: "lobster Two";
-//       text-transform: capitalize;
-//     }
-//   }
-// }
 
 #scrollbar {
   &::-webkit-scrollbar {
