--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -1,11 +1,10 @@
 body {
   box-sizing: border-box;
-  margin: 3.2rem;
   background-color: var(--black);
   color: var(--off-white);
 }
 
-.container-menu {
+.menu-container {
   margin: 0 auto;
   padding: 0 6.4rem;
   background: radial-gradient(
@@ -13,11 +12,148 @@ body {
     rgb(20, 20, 20) 0%,
     rgb(12, 12, 12) 99.4%
   );
-  height: calc(100vh - 6.4rem);
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 1fr 4.5fr;
-  gap: 6.4rem;
+  grid-template-columns: repeat(10, 2fr);
+  grid-template-rows: 2fr repeat(15, 4fr);
+  gap: 3.2rem;
+
+  .menu {
+    margin: 0 8rem;
+
+    // first column of menu
+    &-do--1 {
+      grid-row: 2 / 5;
+      grid-column: 5 / 7;
+    }
+
+    &-do--4 {
+      grid-row: 5 / 8;
+      grid-column: 5 / 7;
+    }
+
+    &-do--7 {
+      grid-row: 8 / 11;
+      grid-column: 5 / 7;
+    }
+
+    &-do--10 {
+      grid-row: 11 / 14;
+      grid-column: 5 / 7;
+
+      // &::after {
+      //   content: "";
+      //   position: absolute;
+      //   bottom: 0;
+      //   right: 0;
+      //   height: 10000%;
+      //   border-left: 1px solid #cfecf7;
+      // }
+    }
+
+    // second column of menu
+    &-do--2 {
+      grid-row: 3 / 6;
+      grid-column: 7 / 9;
+    }
+
+    &-do--5 {
+      grid-row: 6 / 9;
+      grid-column: 7 / 9;
+    }
+
+    &-do--8 {
+      grid-column: 7 / 9;
+      grid-row: 9 / 12;
+    }
+
+    &-do--11 {
+      grid-column: 7 / 9;
+      grid-row: 12 / 15;
+    }
+
+    // third column of menu
+    &-do--3 {
+      grid-column: 9 / 11;
+      grid-row: 4 / 7;
+    }
+
+    &-do--6 {
+      grid-column: 9 / 11;
+      grid-row: 7 / 10;
+    }
+
+    &-do--9 {
+      grid-column: 9 / 11;
+      grid-row: 10 / 13;
+    }
+
+    &-do--12 {
+      grid-column: 9 / 11;
+      grid-row: 13 / 16;
+    }
+    &-content {
+      grid-column: 1 / 5;
+      grid-row: 3 / 6;
+      &__header {
+        &--heading {
+          font-size: 4.8rem;
+          font-family: "Lobster Two";
+          span {
+            color: var(--brown-light);
+          }
+        }
+        &--subheading {
+          font-size: 3.2rem;
+          font-family: "Lobster Two";
+        }
+      }
+      &__text {
+        margin-top: 4.8rem;
+        font-size: 1.6rem;
+        letter-spacing: 1px;
+        line-height: 1.5;
+        max-width: 40rem;
+        hyphens: auto;
+      }
+    }
+  }
+}
+
+.menu-card {
+  &__details {
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding: 1.6rem 2.4rem;
+    gap: 0.8rem;
+  }
+  &-list {
+    grid-row: 1 / -1;
+    grid-column: 1 / 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    // flex-direction: column;
+    color: var(--black);
+    font-size: 1.4rem;
+    font-weight: 500;
+    & > * {
+      list-style: none;
+    }
+  }
+
+  &-add-btn {
+    grid-column: 2 / -1;
+    grid-row: 1 / 2;
+  }
+  &-remove-btn {
+    grid-column: 2 / -1;
+    grid-row: 2 / -1;
+  }
 }
 
 #scrollbar {
