+button_markup n _css +card_css

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -52,6 +52,7 @@
   color: var(--off-black-3) !important;
   padding: 0.6rem 1.2rem !important;
   font-size: 1.2rem !important;
+  max-height: 3.2rem !important;
 
   &:hover {
     color: var(--brown-light) !important;
