--- a/css/style.css
+++ b/css/style.css
@@ -11,47 +11,108 @@ body {
   grid-template-columns: repeat(10, 2fr);
   grid-template-rows: 2fr repeat(15, 4fr);
   gap: 3.2rem; }
+  @media only screen and (max-width: 74em) {
+    .menu-container {
+      grid-template-rows: 2fr repeat(18, 4fr); } }
   .menu-container .menu {
-    margin: 0 8rem; }
+    margin: 0 8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+    @media only screen and (max-width: 85em) {
+      .menu-container .menu {
+        margin: 0; } }
     .menu-container .menu-do--1 {
       grid-row: 2 / 5;
       grid-column: 5 / 7; }
+      @media only screen and (max-width: 74em) {
+        .menu-container .menu-do--1 {
+          grid-row: 5 / 8;
+          grid-column: 1 / -1; } }
     .menu-container .menu-do--4 {
       grid-row: 5 / 8;
       grid-column: 5 / 7; }
+      @media only screen and (max-width: 74em) {
+        .menu-container .menu-do--4 {
+          grid-row: 8 / 11;
+          grid-column: 1 / -1; } }
     .menu-container .menu-do--7 {
       grid-row: 8 / 11;
       grid-column: 5 / 7; }
+      @media only screen and (max-width: 74em) {
+        .menu-container .menu-do--7 {
+          grid-row: 11 / 14;
+          grid-column: 1 / -1; } }
     .menu-container .menu-do--10 {
       grid-row: 11 / 14;
       grid-column: 5 / 7; }
+      @media only screen and (max-width: 74em) {
+        .menu-container .menu-do--10 {
+          grid-row: 14 / 17;
+          grid-column: 1 / -1; } }
     .menu-container .menu-do--2 {
       grid-row: 3 / 6;
       grid-column: 7 / 9; }
+      @media only screen and (max-width: 74em) {
+        .menu-container .menu-do--2 {
+          grid-column: 1 / -1;
+          grid-row: 2 / 5; } }
     .menu-container .menu-do--5 {
       grid-row: 6 / 9;
       grid-column: 7 / 9; }
+      @media only screen and (max-width: 74em) {
+        .menu-container .menu-do--5 {
+          grid-column: 1 / -1;
+          grid-row: 2 / 5; } }
     .menu-container .menu-do--8 {
       grid-column: 7 / 9;
       grid-row: 9 / 12; }
+      @media only screen and (max-width: 74em) {
+        .menu-container .menu-do--8 {
+          grid-column: 1 / -1;
+          grid-row: 2 / 5; } }
     .menu-container .menu-do--11 {
       grid-column: 7 / 9;
       grid-row: 12 / 15; }
+      @media only screen and (max-width: 74em) {
+        .menu-container .menu-do--11 {
+          grid-column: 1 / -1;
+          grid-row: 2 / 5; } }
     .menu-container .menu-do--3 {
       grid-column: 9 / 11;
       grid-row: 4 / 7; }
+      @media only screen and (max-width: 74em) {
+        .menu-container .menu-do--3 {
+          grid-row: 2 / 5;
+          grid-column: 1 / -1; } }
     .menu-container .menu-do--6 {
       grid-column: 9 / 11;
       grid-row: 7 / 10; }
+      @media only screen and (max-width: 74em) {
+        .menu-container .menu-do--6 {
+          grid-column: 1 / -1;
+          grid-row: 2 / 5; } }
     .menu-container .menu-do--9 {
       grid-column: 9 / 11;
       grid-row: 10 / 13; }
+      @media only screen and (max-width: 74em) {
+        .menu-container .menu-do--9 {
+          grid-column: 1 / -1;
+          grid-row: 2 / 5; } }
     .menu-container .menu-do--12 {
       grid-column: 9 / 11;
       grid-row: 13 / 16; }
+      @media only screen and (max-width: 74em) {
+        .menu-container .menu-do--12 {
+          grid-column: 1 / -1;
+          grid-row: 2 / 5; } }
     .menu-container .menu-content {
       grid-column: 1 / 5;
       grid-row: 3 / 6; }
+      @media only screen and (max-width: 74em) {
+        .menu-container .menu-content {
+          grid-column: 1 / -1;
+          grid-row: 2 / 5; } }
       .menu-container .menu-content__header--heading {
         font-size: 4.8rem;
         font-family: "Lobster Two"; }
@@ -65,36 +126,143 @@ body {
         font-size: 1.6rem;
         letter-spacing: 1px;
         line-height: 1.5;
-        max-width: 40rem;
+        max-width: 50rem;
         hyphens: auto; }
+        @media only screen and (max-width: 85em) {
+          .menu-container .menu-content__text {
+            max-width: 40rem; } }
 
-.menu-card__details {
-  display: grid;
-  grid-template-columns: 1.5fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  padding: 1.6rem 2.4rem;
-  gap: 0.8rem; }
-
-.menu-card-list {
-  grid-row: 1 / -1;
-  grid-column: 1 / 2;
+.menu-card {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
-  flex-direction: column;
-  color: var(--black);
-  font-size: 1.4rem;
-  font-weight: 500; }
-  .menu-card-list > * {
-    list-style: none; }
-
-.menu-card-add-btn {
-  grid-column: 2 / -1;
-  grid-row: 1 / 2; }
-
-.menu-card-remove-btn {
-  grid-column: 2 / -1;
-  grid-row: 2 / -1; }
+  height: 35rem;
+  max-width: 30rem;
+  border-radius: 4rem;
+  overflow: hidden;
+  position: relative; }
+  .menu-card__details {
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding: 0rem 2.4rem 2.4rem;
+    gap: 0.8rem; }
+  .menu-card-list {
+    grid-row: 1 / -1;
+    grid-column: 1 / 2;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    color: var(--black);
+    font-size: 1.4rem;
+    font-weight: 500; }
+    .menu-card-list > * {
+      list-style: none; }
+  .menu-card-add-btn {
+    grid-column: 2 / -1;
+    grid-row: 1 / 2; }
+  .menu-card-remove-btn {
+    grid-column: 2 / -1;
+    grid-row: 2 / -1; }
+  .menu-card--1 {
+    background-color: #444;
+    background-image: url(/img/Group9.png);
+    background-size: cover; }
+  .menu-card--2 {
+    background-color: #444;
+    background-image: url(/img/Group10.png);
+    background-size: cover; }
+  .menu-card--3 {
+    background-color: #444;
+    background-image: url(/img/Group11.png);
+    background-size: cover; }
+  .menu-card__overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    border-radius: 4rem;
+    background-color: var(--off-white);
+    transform: translateY(100%);
+    transition: 0.2s ease-in-out; }
+  .menu-card__image {
+    width: 70%;
+    height: auto;
+    margin-top: 4.8rem;
+    transition: 0.2s ease-in-out; }
+  .menu-card__header {
+    position: relative;
+    padding: 2.2rem 0rem;
+    border-radius: 4rem 0 0 0;
+    background-color: var(--off-white);
+    transform: translateY(-100%);
+    transition: 0.2s ease-in-out; }
+  .menu-card:focus .menu-card__overlay,
+  .menu-card:hover .menu-card__overlay {
+    transform: translateY(0); }
+  .menu-card:focus .menu-card__header,
+  .menu-card:hover .menu-card__header {
+    transform: translateY(0); }
+  .menu-card:focus .menu-card__image,
+  .menu-card:hover .menu-card__image {
+    transform: scale(0.6); }
+  .menu-card__arc {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    bottom: 100%;
+    right: 0;
+    z-index: 1; }
+    .menu-card__arc path {
+      fill: var(--off-white);
+      d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z"); }
+  .menu-card__header-text {
+    display: flex;
+    align-items: center;
+    justify-content: space-around; }
+  .menu-card__title {
+    font-size: 2.8rem;
+    font-family: "Lobster Two";
+    font-weight: 800; }
+    @media only screen and (max-width: 85em) {
+      .menu-card__title {
+        font-size: 2.4rem; } }
+    .menu-card__title--1 {
+      color: var(--black); }
+    .menu-card__title--2 {
+      color: #777; }
+    .menu-card__title--3 {
+      color: var(--brown-light); }
+  .menu-card__status {
+    font-size: 1.8rem;
+    font-weight: 500;
+    color: var(--off-black-3); }
+  .menu-card__description {
+    margin: 0 2.4rem 2.4rem 2.4rem;
+    font-size: 1.2rem;
+    color: var(--off-black-3);
+    font-family: "Quicksand";
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 5;
+    overflow: hidden; }
+  .menu-card__invite {
+    grid-column: 1 / -1;
+    margin: 6.4rem 6.4rem 0 6.4rem;
+    font-size: 1.8rem;
+    font-weight: 400;
+    font-family: "Lobster Two";
+    color: var(--grey-2);
+    letter-spacing: 1.5px;
+    text-align: center; }
+    .menu-card__invite span {
+      color: var(--off-white);
+      transition: color 0.2s ease;
+      cursor: pointer; }
+      .menu-card__invite span:hover {
+        color: var(--brown-light); }
 
 #scrollbar::-webkit-scrollbar {
   width: 10px; }
@@ -299,7 +467,8 @@ body {
 .menu-button {
   color: var(--off-black-3) !important;
   padding: 0.6rem 1.2rem !important;
-  font-size: 1.2rem !important; }
+  font-size: 1.2rem !important;
+  max-height: 3.2rem !important; }
   .menu-button:hover {
     color: var(--brown-light) !important;
     background-color: var(--off-black-3) !important; }
@@ -451,110 +620,6 @@ body {
       transition: color 0.2s ease;
       cursor: pointer; }
       .card__invite span:hover {
-        color: var(--brown-light); }
-
-.menu-card {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  height: 40rem;
-  max-width: 30rem;
-  border-radius: 4rem;
-  overflow: hidden;
-  position: relative; }
-  .menu-card--1 {
-    background-color: #444;
-    background-image: url(/img/Group9.png);
-    background-size: cover; }
-  .menu-card--2 {
-    background-color: #444;
-    background-image: url(/img/Group10.png);
-    background-size: cover; }
-  .menu-card--3 {
-    background-color: #444;
-    background-image: url(/img/Group11.png);
-    background-size: cover; }
-  .menu-card__overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-    border-radius: 4rem;
-    background-color: var(--off-white);
-    transform: translateY(100%);
-    transition: 0.2s ease-in-out; }
-  .menu-card__image {
-    width: 70%;
-    height: auto;
-    margin-top: 4.8rem;
-    transition: 0.2s ease-in-out; }
-  .menu-card__header {
-    position: relative;
-    padding: 1.6rem 2.4rem;
-    border-radius: 4rem 0 0 0;
-    background-color: var(--off-white);
-    transform: translateY(-100%);
-    transition: 0.2s ease-in-out; }
-  .menu-card:focus .menu-card__overlay,
-  .menu-card:hover .menu-card__overlay {
-    transform: translateY(0); }
-  .menu-card:focus .menu-card__header,
-  .menu-card:hover .menu-card__header {
-    transform: translateY(0); }
-  .menu-card:focus .menu-card__image,
-  .menu-card:hover .menu-card__image {
-    transform: scale(0.6); }
-  .menu-card__arc {
-    width: 80px;
-    height: 80px;
-    position: absolute;
-    bottom: 100%;
-    right: 0;
-    z-index: 1; }
-    .menu-card__arc path {
-      fill: var(--off-white);
-      d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z"); }
-  .menu-card__header-text {
-    display: flex;
-    align-items: center;
-    justify-content: space-around; }
-  .menu-card__title {
-    font-size: 3.2em;
-    font-family: "Lobster Two"; }
-    .menu-card__title--1 {
-      color: var(--black); }
-    .menu-card__title--2 {
-      color: #333; }
-    .menu-card__title--3 {
-      color: var(--brown-light); }
-  .menu-card__status {
-    font-size: 2rem;
-    font-weight: 500;
-    color: var(--off-black-3); }
-  .menu-card__description {
-    margin: 0 2.4rem 2.4rem 2.4rem;
-    font-size: 1.2rem;
-    color: var(--off-black-3);
-    font-family: "Quicksand";
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
-    overflow: hidden; }
-  .menu-card__invite {
-    grid-column: 1 / -1;
-    margin: 6.4rem 6.4rem 0 6.4rem;
-    font-size: 1.8rem;
-    font-weight: 400;
-    font-family: "Lobster Two";
-    color: var(--grey-2);
-    letter-spacing: 1.5px;
-    text-align: center; }
-    .menu-card__invite span {
-      color: var(--off-white);
-      transition: color 0.2s ease;
-      cursor: pointer; }
-      .menu-card__invite span:hover {
         color: var(--brown-light); }
 
 .line {
