--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -15,89 +15,144 @@ body {
   display: grid;
   grid-template-columns: repeat(10, 2fr);
   grid-template-rows: 2fr repeat(15, 4fr);
+  @include respond(md-tab) {
+    grid-template-rows: 2fr repeat(18, 4fr);
+  }
   gap: 3.2rem;
 
   .menu {
     margin: 0 8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    @include respond(big-tab) {
+      margin: 0;
+    }
 
     // first column of menu
     &-do--1 {
       grid-row: 2 / 5;
       grid-column: 5 / 7;
+      @include respond(md-tab) {
+        grid-row: 5 / 8;
+        grid-column: 1 / -1;
+      }
     }
 
     &-do--4 {
       grid-row: 5 / 8;
       grid-column: 5 / 7;
+      @include respond(md-tab) {
+        grid-row: 8 / 11;
+        grid-column: 1 / -1;
+      }
     }
 
     &-do--7 {
       grid-row: 8 / 11;
       grid-column: 5 / 7;
+      @include respond(md-tab) {
+        grid-row: 11 / 14;
+        grid-column: 1 / -1;
+      }
     }
 
     &-do--10 {
       grid-row: 11 / 14;
       grid-column: 5 / 7;
-
-      // &::after {
-      //   content: "";
-      //   position: absolute;
-      //   bottom: 0;
-      //   right: 0;
-      //   height: 10000%;
-      //   border-left: 1px solid #cfecf7;
-      // }
+      @include respond(md-tab) {
+        grid-row: 14 / 17;
+        grid-column: 1 / -1;
+      }
     }
 
     // second column of menu
     &-do--2 {
       grid-row: 3 / 6;
       grid-column: 7 / 9;
+      @include respond(md-tab) {
+        grid-column: 1 / -1;
+        grid-row: 2 / 5;
+      }
     }
 
     &-do--5 {
       grid-row: 6 / 9;
       grid-column: 7 / 9;
+      @include respond(md-tab) {
+        grid-column: 1 / -1;
+        grid-row: 2 / 5;
+      }
     }
 
     &-do--8 {
       grid-column: 7 / 9;
       grid-row: 9 / 12;
+      @include respond(md-tab) {
+        grid-column: 1 / -1;
+        grid-row: 2 / 5;
+      }
     }
 
     &-do--11 {
       grid-column: 7 / 9;
       grid-row: 12 / 15;
+      @include respond(md-tab) {
+        grid-column: 1 / -1;
+        grid-row: 2 / 5;
+      }
     }
 
     // third column of menu
     &-do--3 {
       grid-column: 9 / 11;
       grid-row: 4 / 7;
+      @include respond(md-tab) {
+        grid-row: 2 / 5;
+        grid-column: 1 / -1;
+      }
     }
 
     &-do--6 {
       grid-column: 9 / 11;
       grid-row: 7 / 10;
+      @include respond(md-tab) {
+        grid-column: 1 / -1;
+        grid-row: 2 / 5;
+      }
     }
 
     &-do--9 {
       grid-column: 9 / 11;
       grid-row: 10 / 13;
+      @include respond(md-tab) {
+        grid-column: 1 / -1;
+        grid-row: 2 / 5;
+      }
     }
 
     &-do--12 {
       grid-column: 9 / 11;
       grid-row: 13 / 16;
+      @include respond(md-tab) {
+        grid-column: 1 / -1;
+        grid-row: 2 / 5;
+      }
     }
+
     &-content {
       grid-column: 1 / 5;
       grid-row: 3 / 6;
+      @include respond(md-tab) {
+        grid-column: 1 / -1;
+        grid-row: 2 / 5;
+      }
       &__header {
         &--heading {
           font-size: 4.8rem;
           font-family: "Lobster Two";
+
           span {
             color: var(--brown-light);
           }
@@ -112,32 +167,41 @@ body {
         font-size: 1.6rem;
         letter-spacing: 1px;
         line-height: 1.5;
-        max-width: 40rem;
+        max-width: 50rem;
         hyphens: auto;
+        @include respond(big-tab) {
+          max-width: 40rem;
+        }
       }
     }
   }
 }
 
 .menu-card {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  height: 35rem;
+  max-width: 30rem;
+  border-radius: 4rem;
+  overflow: hidden;
+  position: relative;
+
   &__details {
     display: grid;
     grid-template-columns: 1.5fr 1fr;
     grid-template-rows: 1fr 1fr;
-    padding: 1.6rem 2.4rem;
+    padding: 0rem 2.4rem 2.4rem;
     gap: 0.8rem;
   }
+
   &-list {
     grid-row: 1 / -1;
     grid-column: 1 / 2;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     flex-direction: column;
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
-    // flex-direction: column;
     color: var(--black);
     font-size: 1.4rem;
     font-weight: 500;
@@ -153,6 +217,143 @@ body {
   &-remove-btn {
     grid-column: 2 / -1;
     grid-row: 2 / -1;
+  }
+
+  &--1 {
+    background-color: #444;
+    background-image: url(/img/Group9.png);
+    background-size: cover;
+  }
+  &--2 {
+    background-color: #444;
+    background-image: url(/img/Group10.png);
+    background-size: cover;
+  }
+  &--3 {
+    background-color: #444;
+    background-image: url(/img/Group11.png);
+    background-size: cover;
+  }
+
+  &__overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    border-radius: 4rem;
+    background-color: var(--off-white);
+    transform: translateY(100%);
+    transition: 0.2s ease-in-out;
+  }
+
+  &__image {
+    width: 70%;
+    height: auto;
+    margin-top: 4.8rem;
+    // box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.3);
+    transition: 0.2s ease-in-out;
+  }
+
+  &__header {
+    position: relative;
+
+    padding: 2.2rem 0rem;
+    border-radius: 4rem 0 0 0;
+    background-color: var(--off-white);
+    transform: translateY(-100%);
+    transition: 0.2s ease-in-out;
+  }
+
+  &:focus &__overlay,
+  &:hover &__overlay {
+    transform: translateY(0);
+  }
+
+  &:focus &__header,
+  &:hover &__header {
+    transform: translateY(0);
+  }
+
+  &:focus &__image,
+  &:hover &__image {
+    transform: scale(0.6);
+  }
+
+  &__arc {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    bottom: 100%;
+    right: 0;
+    z-index: 1;
+
+    path {
+      fill: var(--off-white);
+      d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
+    }
+  }
+
+  &__header-text {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  &__title {
+    font-size: 2.8rem;
+    font-family: "Lobster Two";
+    font-weight: 800;
+    @include respond(big-tab) {
+      font-size: 2.4rem;
+    }
+    &--1 {
+      color: var(--black);
+    }
+    &--2 {
+      color: #777;
+    }
+    &--3 {
+      color: var(--brown-light);
+    }
+  }
+
+  &__status {
+    font-size: 1.8rem;
+    font-weight: 500;
+    color: var(--off-black-3);
+  }
+
+  &__description {
+    margin: 0 2.4rem 2.4rem 2.4rem;
+    font-size: 1.2rem;
+    color: var(--off-black-3);
+    font-family: "Quicksand";
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 5;
+    overflow: hidden;
+  }
+
+  &__invite {
+    grid-column: 1 / -1;
+    margin: 6.4rem 6.4rem 0 6.4rem;
+    font-size: 1.8rem;
+    font-weight: 400;
+    font-family: "Lobster Two";
+    color: var(--grey-2);
+    letter-spacing: 1.5px;
+    text-align: center;
+
+    span {
+      color: var(--off-white);
+      transition: color 0.2s ease;
+      cursor: pointer;
+
+      &:hover {
+        color: var(--brown-light);
+      }
+    }
   }
 }
 
