--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "abstracts/mixins";
 @import "pages/menu";
 @import "pages/about";
+@import "pages/signup";
 
 @import "abstracts/typography";
 @import "abstracts/helper";
