--- a/sass/layout/_card.scss
+++ b/sass/layout/_card.scss
@@ -144,7 +144,7 @@
   }
 
   &__title {
-    font-size: 3.2em;
+    font-size: 3.4rem;
     font-family: "Lobster Two";
     &--1 {
       color: #82c3e6;
