--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -143,7 +143,7 @@ body {
 
     &-content {
       grid-column: 1 / 5;
-      grid-row: 3 / 6;
+      grid-row: 3 / -1;
       @include respond(md-tab) {
         grid-column: 1 / -1;
         grid-row: 2 / 5;
@@ -152,6 +152,7 @@ body {
         &--heading {
           font-size: 4.8rem;
           font-family: "Lobster Two";
+          color: var(--off-white);
 
           span {
             color: var(--brown-light);
@@ -160,6 +161,7 @@ body {
         &--subheading {
           font-size: 3.2rem;
           font-family: "Lobster Two";
+          color: var(--off-white);
         }
       }
       &__text {
@@ -169,10 +171,51 @@ body {
         line-height: 1.5;
         max-width: 50rem;
         hyphens: auto;
+        color: var(--off-white);
         @include respond(big-tab) {
           max-width: 40rem;
         }
       }
+    }
+  }
+}
+
+.ingredients {
+  font-size: 1.6rem;
+  margin-top: 9.6rem;
+  padding: 1.6rem;
+  border-radius: 5px;
+  display: inline-flex;
+  flex-direction: column;
+  max-width: auto;
+  outline: 2px solid var(--off-white);
+  &--item {
+    color: var(--off-white);
+  }
+  span {
+    color: var(--brown-light);
+    font-weight: 700;
+  }
+}
+
+.check-out {
+  display: block;
+  margin-top: 4.8rem;
+  border-radius: 5px !important;
+}
+
+.quantity {
+  font-size: 1.2rem;
+  grid-row: -1 / -1;
+  grid-column: 1 / -1;
+  text-align: center;
+  margin: 0 auto;
+  &--item {
+    color: var(--black);
+    font-weight: 500;
+    span {
+      font-weight: 800;
+      color: var(--brown-light);
     }
   }
 }
